*** empty log message ***

--- a/modules/actor.properties
+++ b/modules/actor.properties
@@ -1,14 +1,16 @@
 #
-#Tue Aug 26 14:42:53 CEST 2008
+#Wed Mar 18 09:22:36 CET 2009
 online_search_field_settings_dialog_size=600/450
 online_search_default_server=Imdb
 import_local_art_back_keywords=back
 enabled=true
 import_local_art_media_keywords=cd,dvd,media
+card_view_picture_order=4\#
+online_search_query_full_details_initially=false
 import_local_art_front_keywords=front,cover,case
 table_view_settings_dialog_size=500/400
 online_search_default_mode=
-field_definitions={0/&/null/&/false/&/false/&/false}{5/&/null/&/true/&/false/&/false}{214/&/null/&/true/&/false/&/false}{6/&/null/&/true/&/false/&/false}{1/&/null/&/true/&/true/&/true}{2/&/null/&/true/&/false/&/false}{3/&/null/&/true/&/false/&/false}{205/&/null/&/true/&/false/&/false}{206/&/null/&/true/&/false/&/false}{4/&/null/&/true/&/false/&/false}{201/&/null/&/true/&/false/&/false}{207/&/null/&/true/&/false/&/false}{208/&/null/&/true/&/false/&/false}{101/&/null/&/false/&/false/&/false}{104/&/null/&/false/&/false/&/false}{105/&/null/&/false/&/false/&/false}{102/&/null/&/false/&/false/&/false}{103/&/null/&/false/&/false/&/false}
+field_definitions={205/&/30000/&/null/&/true/&/false/&/false/&/false/&/Technical Information}{2/&/30000/&/null/&/true/&/false/&/false/&/false/&/Information}{5/&/30000/&/null/&/true/&/false/&/false/&/false/&/Information}{0/&/30000/&/null/&/true/&/false/&/false/&/false/&/Information}{201/&/30000/&/null/&/true/&/false/&/false/&/false/&/null}{214/&/30000/&/null/&/true/&/false/&/false/&/false/&/null}{6/&/30000/&/null/&/true/&/false/&/false/&/false/&/Information}{206/&/30000/&/null/&/true/&/false/&/false/&/false/&/Technical Information}{1/&/30000/&/null/&/true/&/false/&/false/&/false/&/Information}{4/&/30000/&/null/&/true/&/false/&/false/&/false/&/null}{207/&/30000/&/null/&/true/&/false/&/false/&/false/&/Technical Information}{208/&/30000/&/null/&/true/&/false/&/false/&/false/&/Technical Information}{101/&/30000/&/null/&/true/&/false/&/false/&/false/&/Information}{104/&/30000/&/null/&/true/&/false/&/false/&/false/&/Information}{105/&/30000/&/null/&/true/&/false/&/false/&/false/&/Information}{102/&/30000/&/null/&/true/&/false/&/false/&/false/&/Information}{103/&/30000/&/null/&/true/&/false/&/false/&/false/&/Information}{3/&/30000/&/null/&/true/&/false/&/false/&/false/&/Information}
 group_by=
 card_view_item_description=
 table_column_order=6\#5\#
@@ -25,7 +27,7 @@ file_import_dialog_size=550/800
 field_settings_dialog_size=505/477
 quick_view_settings_dialog_size=542/497
 auto_add_perfect_match=false
-quick_view_field_definitions={6/&/true/&/Horizontal/&/0}{5/&/true/&/Horizontal/&/0}{2/&/true/&/Vertical/&/0}{214/&/false/&/Horizontal/&/0}{1/&/false/&/Horizontal/&/0}{205/&/false/&/Horizontal/&/0}{206/&/false/&/Horizontal/&/0}{3/&/false/&/Horizontal/&/0}{208/&/false/&/Horizontal/&/0}{207/&/false/&/Horizontal/&/0}{201/&/false/&/Horizontal/&/0}{4/&/true/&/Horizontal/&/0}
+quick_view_field_definitions={0/&/false/&/Horizontal/&/0}{101/&/true/&/Horizontal/&/0}{104/&/true/&/Horizontal/&/0}{105/&/true/&/Horizontal/&/0}{102/&/true/&/Horizontal/&/0}{103/&/true/&/Horizontal/&/0}{6/&/true/&/Horizontal/&/0}{5/&/true/&/Horizontal/&/0}{2/&/true/&/Vertical/&/0}{214/&/false/&/Horizontal/&/0}{1/&/false/&/Horizontal/&/0}{205/&/false/&/Horizontal/&/0}{206/&/false/&/Horizontal/&/0}{3/&/false/&/Horizontal/&/0}{208/&/false/&/Horizontal/&/0}{207/&/false/&/Horizontal/&/0}{201/&/false/&/Horizontal/&/0}{4/&/true/&/Horizontal/&/0}
 card_view_settings_dialog_size=500/400
 Simple_Item_Form_Size=450/550
 online_search_retrieved_fields=2\#205\#4\#207\#201\#1\#206\#3\#208\#0\#
