--- a/modules/contactperson.properties
+++ b/modules/contactperson.properties
@@ -1,14 +1,16 @@
 #
-#Tue Aug 26 14:48:45 CEST 2008
+#Wed Mar 18 09:22:36 CET 2009
 online_search_field_settings_dialog_size=600/450
 online_search_default_server=
 import_local_art_back_keywords=back
 enabled=true
 import_local_art_media_keywords=cd,dvd,media
+card_view_picture_order=3\#
+online_search_query_full_details_initially=false
 import_local_art_front_keywords=front,cover,case
 table_view_settings_dialog_size=500/400
 online_search_default_mode=
-field_definitions={214/&/null/&/true/&/false/&/false}{9/&/null/&/true/&/false/&/false}{10/&/null/&/true/&/false/&/false}{101/&/null/&/true/&/false/&/false}{104/&/null/&/true/&/false/&/false}{105/&/null/&/true/&/false/&/false}{102/&/null/&/true/&/false/&/false}{103/&/null/&/true/&/false/&/false}{0/&/null/&/true/&/false/&/false}{1/&/null/&/true/&/true/&/false}{4/&/null/&/true/&/false/&/false}{2/&/null/&/true/&/false/&/false}{3/&/null/&/true/&/false/&/false}{8/&/null/&/true/&/false/&/false}{6/&/null/&/true/&/false/&/false}{7/&/null/&/true/&/false/&/false}{5/&/null/&/true/&/true/&/false}{205/&/null/&/true/&/false/&/false}{206/&/null/&/true/&/false/&/false}{201/&/null/&/true/&/false/&/false}
+field_definitions={6/&/56/&/null/&/true/&/false/&/false/&/false/&/Information}{4/&/56/&/null/&/true/&/false/&/false/&/false/&/Information}{9/&/56/&/null/&/true/&/false/&/false/&/false/&/Information}{10/&/56/&/null/&/true/&/false/&/false/&/false/&/Information}{205/&/56/&/null/&/true/&/false/&/false/&/false/&/Technical Information}{2/&/56/&/null/&/true/&/false/&/false/&/false/&/Information}{5/&/56/&/null/&/true/&/false/&/false/&/false/&/Information}{0/&/56/&/null/&/true/&/false/&/false/&/false/&/Information}{201/&/56/&/null/&/true/&/false/&/false/&/false/&/null}{214/&/56/&/null/&/true/&/false/&/false/&/false/&/null}{206/&/56/&/null/&/true/&/false/&/false/&/false/&/Technical Information}{1/&/56/&/null/&/true/&/false/&/false/&/false/&/Information}{7/&/56/&/null/&/true/&/false/&/false/&/false/&/Information}{8/&/56/&/null/&/true/&/false/&/false/&/false/&/Information}{3/&/56/&/null/&/true/&/false/&/false/&/false/&/null}{101/&/56/&/null/&/true/&/false/&/false/&/false/&/Information}{104/&/56/&/null/&/true/&/false/&/false/&/false/&/Information}{105/&/56/&/null/&/true/&/false/&/false/&/false/&/Information}{102/&/56/&/null/&/true/&/false/&/false/&/false/&/Information}{103/&/56/&/null/&/true/&/false/&/false/&/false/&/Information}
 group_by=
 card_view_item_description=
 table_column_order=
