--- a/modules/media.properties
+++ b/modules/media.properties
@@ -1,14 +1,16 @@
 #
-#Tue Aug 26 14:42:53 CEST 2008
+#Wed Mar 18 09:22:36 CET 2009
 online_search_field_settings_dialog_size=600/450
 online_search_default_server=
 import_local_art_back_keywords=back
 enabled=true
 import_local_art_media_keywords=cd,dvd,media
+card_view_picture_order=
+online_search_query_full_details_initially=false
 import_local_art_front_keywords=front,cover,case
 table_view_settings_dialog_size=500/400
 online_search_default_mode=
-field_definitions={0/&/null/&/false/&/false/&/false}{150/&/null/&/true/&/true/&/true}{201/&/null/&/true/&/false/&/false}{152/&/null/&/true/&/false/&/false}{213/&/null/&/true/&/false/&/false}{151/&/null/&/true/&/false/&/false}{203/&/null/&/true/&/false/&/false}{204/&/null/&/true/&/false/&/false}{205/&/null/&/true/&/false/&/false}{206/&/null/&/true/&/false/&/false}{154/&/null/&/true/&/false/&/false}{101/&/null/&/false/&/false/&/false}{103/&/null/&/false/&/false/&/false}{105/&/null/&/false/&/false/&/false}{102/&/null/&/false/&/false/&/false}{104/&/null/&/false/&/false/&/false}{214/&/null/&/false/&/false/&/false}{202/&/null/&/true/&/false/&/false}
+field_definitions={202/&/57/&/null/&/true/&/false/&/false/&/false/&/null}{213/&/57/&/null/&/true/&/false/&/false/&/false/&/Information}{205/&/57/&/null/&/true/&/false/&/false/&/false/&/Technical Information}{204/&/57/&/null/&/true/&/false/&/false/&/false/&/null}{216/&/57/&/null/&/true/&/false/&/false/&/false/&/null}{151/&/57/&/null/&/true/&/false/&/false/&/false/&/Information}{215/&/57/&/null/&/true/&/false/&/false/&/false/&/null}{0/&/57/&/null/&/true/&/false/&/false/&/false/&/Information}{201/&/57/&/null/&/true/&/false/&/false/&/false/&/null}{214/&/57/&/null/&/true/&/false/&/false/&/false/&/null}{203/&/57/&/null/&/true/&/false/&/false/&/false/&/null}{206/&/57/&/null/&/true/&/false/&/false/&/false/&/Technical Information}{154/&/57/&/null/&/true/&/false/&/false/&/false/&/Information}{150/&/57/&/null/&/true/&/false/&/false/&/false/&/Information}{101/&/57/&/null/&/true/&/false/&/false/&/false/&/Information}{104/&/57/&/null/&/true/&/false/&/false/&/false/&/Information}{105/&/57/&/null/&/true/&/false/&/false/&/false/&/Information}{102/&/57/&/null/&/true/&/false/&/false/&/false/&/Information}{103/&/57/&/null/&/true/&/false/&/false/&/false/&/Information}{152/&/57/&/null/&/true/&/false/&/false/&/false/&/Information}
 group_by=201\#152\#
 card_view_item_description=
 table_column_order=201\#150\#152\#154\#
@@ -25,7 +27,7 @@ file_import_dialog_size=550/800
 field_settings_dialog_size=605/525
 quick_view_settings_dialog_size=508/501
 auto_add_perfect_match=false
-quick_view_field_definitions={213/&/false/&/Horizontal/&/0}{201/&/true/&/Horizontal/&/0}{150/&/true/&/Horizontal/&/0}{152/&/true/&/Horizontal/&/0}{151/&/true/&/Vertical/&/0}{203/&/false/&/Horizontal/&/0}{154/&/true/&/Horizontal/&/0}{204/&/true/&/Horizontal/&/0}{205/&/true/&/Horizontal/&/0}{206/&/true/&/Horizontal/&/0}{202/&/false/&/Horizontal/&/0}
+quick_view_field_definitions={216/&/true/&/Horizontal/&/0}{215/&/false/&/Horizontal/&/0}{0/&/false/&/Horizontal/&/0}{214/&/true/&/Horizontal/&/0}{101/&/true/&/Horizontal/&/0}{104/&/true/&/Horizontal/&/0}{105/&/true/&/Horizontal/&/0}{102/&/true/&/Horizontal/&/0}{103/&/true/&/Horizontal/&/0}{213/&/false/&/Horizontal/&/0}{201/&/true/&/Horizontal/&/0}{150/&/true/&/Horizontal/&/0}{152/&/true/&/Horizontal/&/0}{151/&/true/&/Vertical/&/0}{203/&/false/&/Horizontal/&/0}{154/&/true/&/Horizontal/&/0}{204/&/true/&/Horizontal/&/0}{205/&/true/&/Horizontal/&/0}{206/&/true/&/Horizontal/&/0}{202/&/false/&/Horizontal/&/0}
 card_view_settings_dialog_size=500/400
 Simple_Item_Form_Size=450/550
 online_search_retrieved_fields=151\#104\#203\#154\#150\#103\#204\#105\#205\#102\#201\#206\#152\#153\#202\#0\#101\#
@@ -33,7 +35,7 @@ online_search_form_size=700/600
 import_local_art_recurses=true
 import_local_art=true
 import_cd_dialog_size=550/400
-web_field_definitions={213/&/100/&/0/&/false/&/false/&/false}{205/&/100/&/0/&/true/&/false/&/false}{151/&/100/&/0/&/true/&/false/&/false}{0/&/100/&/0/&/false/&/false/&/false}{201/&/100/&/0/&/true/&/false/&/false}{214/&/100/&/0/&/true/&/false/&/false}{153/&/100/&/0/&/true/&/false/&/false}{206/&/100/&/0/&/true/&/false/&/false}{154/&/100/&/0/&/true/&/false/&/false}{150/&/100/&/0/&/true/&/true/&/true}{101/&/100/&/0/&/true/&/false/&/false}{104/&/100/&/0/&/true/&/false/&/false}{105/&/100/&/0/&/true/&/false/&/false}{102/&/100/&/0/&/true/&/false/&/false}{103/&/100/&/0/&/true/&/false/&/false}{152/&/100/&/0/&/true/&/false/&/false}
+web_field_definitions={202/&/100/&/0/&/false/&/false/&/false}{204/&/100/&/0/&/true/&/false/&/false}{216/&/100/&/0/&/true/&/false/&/false}{215/&/100/&/0/&/false/&/false/&/false}{203/&/100/&/0/&/false/&/false/&/false}{213/&/100/&/0/&/false/&/false/&/false}{205/&/100/&/0/&/true/&/false/&/false}{151/&/100/&/0/&/true/&/false/&/false}{0/&/100/&/0/&/false/&/false/&/false}{201/&/100/&/0/&/true/&/false/&/false}{214/&/100/&/0/&/true/&/false/&/false}{206/&/100/&/0/&/true/&/false/&/false}{154/&/100/&/0/&/true/&/false/&/false}{150/&/100/&/0/&/true/&/true/&/true}{101/&/100/&/0/&/true/&/false/&/false}{104/&/100/&/0/&/true/&/false/&/false}{105/&/100/&/0/&/true/&/false/&/false}{102/&/100/&/0/&/true/&/false/&/false}{103/&/100/&/0/&/true/&/false/&/false}{152/&/100/&/0/&/true/&/false/&/false}
 filter_dialog_size=700/400
 quick_filter_default_field=0
 simple_item_view_size=450/550
