--- a/modules/musictrack.properties
+++ b/modules/musictrack.properties
@@ -1,14 +1,16 @@
 #
-#Tue Aug 26 14:42:53 CEST 2008
+#Wed Mar 18 09:22:36 CET 2009
 online_search_field_settings_dialog_size=600/450
 online_search_default_server=
 import_local_art_back_keywords=back
 enabled=true
 import_local_art_media_keywords=cd,dvd,media
+card_view_picture_order=
+online_search_query_full_details_initially=false
 import_local_art_front_keywords=front,cover,case
 table_view_settings_dialog_size=500/400
 online_search_default_mode=
-field_definitions={212/&/null/&/true/&/false/&/false}{214/&/null/&/true/&/false/&/false}{209/&/null/&/true/&/false/&/false}{211/&/null/&/true/&/false/&/false}{210/&/null/&/true/&/false/&/false}{201/&/null/&/true/&/false/&/false}{0/&/null/&/true/&/false/&/false}{1/&/null/&/true/&/true/&/false}{2/&/null/&/true/&/false/&/false}{150/&/null/&/true/&/false/&/false}{151/&/null/&/true/&/false/&/false}{8/&/null/&/true/&/false/&/false}{11/&/null/&/false/&/false/&/false}{3/&/null/&/true/&/false/&/false}{7/&/null/&/true/&/false/&/false}{205/&/null/&/true/&/false/&/false}{6/&/null/&/true/&/false/&/false}{206/&/null/&/true/&/false/&/false}{154/&/null/&/true/&/false/&/false}{152/&/null/&/true/&/false/&/false}{10/&/null/&/true/&/false/&/false}{5/&/null/&/true/&/false/&/false}{101/&/null/&/false/&/false/&/false}{104/&/null/&/false/&/false/&/false}{102/&/null/&/false/&/false/&/false}{105/&/null/&/false/&/false/&/false}{103/&/null/&/false/&/false/&/false}
+field_definitions={11/&/58/&/null/&/true/&/false/&/false/&/false/&/Technical Information}{2/&/58/&/null/&/true/&/false/&/false/&/false/&/Information}{205/&/58/&/null/&/true/&/false/&/false/&/false/&/Technical Information}{151/&/58/&/null/&/true/&/false/&/false/&/false/&/Information}{7/&/58/&/null/&/true/&/false/&/false/&/false/&/Technical Information}{209/&/58/&/null/&/true/&/false/&/false/&/false/&/Technical Information}{212/&/58/&/null/&/true/&/false/&/false/&/false/&/Technical Information}{211/&/58/&/null/&/true/&/false/&/false/&/false/&/Information}{210/&/58/&/null/&/true/&/false/&/false/&/false/&/Technical Information}{3/&/58/&/null/&/true/&/false/&/false/&/false/&/Information}{0/&/58/&/null/&/true/&/false/&/false/&/false/&/Information}{201/&/58/&/null/&/true/&/false/&/false/&/false/&/null}{214/&/58/&/null/&/true/&/false/&/false/&/false/&/null}{8/&/58/&/null/&/true/&/false/&/false/&/false/&/Information}{206/&/58/&/null/&/true/&/false/&/false/&/false/&/Technical Information}{5/&/58/&/null/&/true/&/false/&/false/&/false/&/Information}{6/&/58/&/null/&/true/&/false/&/false/&/false/&/Technical Information}{154/&/58/&/null/&/true/&/false/&/false/&/false/&/Information}{10/&/58/&/null/&/true/&/false/&/false/&/false/&/Information}{150/&/58/&/null/&/true/&/false/&/false/&/false/&/Information}{1/&/58/&/null/&/true/&/false/&/false/&/false/&/Information}{101/&/58/&/null/&/true/&/false/&/false/&/false/&/Information}{104/&/58/&/null/&/true/&/false/&/false/&/false/&/Information}{105/&/58/&/null/&/true/&/false/&/false/&/false/&/Information}{102/&/58/&/null/&/true/&/false/&/false/&/false/&/Information}{103/&/58/&/null/&/true/&/false/&/false/&/false/&/Information}{152/&/58/&/null/&/true/&/false/&/false/&/false/&/Information}
 group_by=
 card_view_item_description=
 table_column_order=1\#150\#5\#
@@ -33,7 +35,7 @@ online_search_form_size=700/600
 import_local_art_recurses=true
 import_local_art=true
 import_cd_dialog_size=550/400
-web_field_definitions={11/&/100/&/0/&/false/&/false/&/false}{2/&/100/&/0/&/false/&/false/&/false}{205/&/100/&/0/&/true/&/false/&/false}{151/&/100/&/0/&/true/&/false/&/false}{7/&/100/&/0/&/true/&/false/&/false}{209/&/100/&/0/&/true/&/false/&/false}{212/&/100/&/0/&/true/&/false/&/false}{211/&/100/&/0/&/true/&/false/&/false}{210/&/100/&/0/&/true/&/false/&/false}{3/&/100/&/0/&/false/&/false/&/false}{0/&/100/&/0/&/false/&/false/&/false}{201/&/100/&/0/&/true/&/false/&/false}{214/&/100/&/0/&/true/&/false/&/false}{153/&/100/&/0/&/true/&/false/&/false}{8/&/100/&/0/&/true/&/false/&/false}{206/&/100/&/0/&/true/&/false/&/false}{5/&/100/&/0/&/true/&/false/&/false}{6/&/100/&/0/&/true/&/false/&/false}{154/&/100/&/0/&/true/&/false/&/false}{10/&/100/&/0/&/false/&/false/&/false}{150/&/100/&/0/&/true/&/true/&/true}{1/&/100/&/0/&/true/&/false/&/false}{101/&/100/&/0/&/true/&/false/&/false}{104/&/100/&/0/&/true/&/false/&/false}{105/&/100/&/0/&/true/&/false/&/false}{102/&/100/&/0/&/true/&/false/&/false}{103/&/100/&/0/&/true/&/false/&/false}{152/&/100/&/0/&/true/&/false/&/false}
+web_field_definitions={11/&/100/&/0/&/false/&/false/&/false}{2/&/100/&/0/&/false/&/false/&/false}{205/&/100/&/0/&/true/&/false/&/false}{151/&/100/&/0/&/true/&/false/&/false}{7/&/100/&/0/&/true/&/false/&/false}{209/&/100/&/0/&/true/&/false/&/false}{212/&/100/&/0/&/true/&/false/&/false}{211/&/100/&/0/&/true/&/false/&/false}{210/&/100/&/0/&/true/&/false/&/false}{3/&/100/&/0/&/false/&/false/&/false}{0/&/100/&/0/&/false/&/false/&/false}{201/&/100/&/0/&/true/&/false/&/false}{214/&/100/&/0/&/true/&/false/&/false}{8/&/100/&/0/&/true/&/false/&/false}{206/&/100/&/0/&/true/&/false/&/false}{5/&/100/&/0/&/true/&/false/&/false}{6/&/100/&/0/&/true/&/false/&/false}{154/&/100/&/0/&/true/&/false/&/false}{10/&/100/&/0/&/false/&/false/&/false}{150/&/100/&/0/&/true/&/true/&/true}{1/&/100/&/0/&/true/&/false/&/false}{101/&/100/&/0/&/true/&/false/&/false}{104/&/100/&/0/&/true/&/false/&/false}{105/&/100/&/0/&/true/&/false/&/false}{102/&/100/&/0/&/true/&/false/&/false}{103/&/100/&/0/&/true/&/false/&/false}{152/&/100/&/0/&/true/&/false/&/false}
 filter_dialog_size=700/400
 quick_filter_default_field=0
 simple_item_view_size=450/550
