--- a/modules/template.properties
+++ b/modules/template.properties
@@ -1,14 +1,16 @@
 #
-#Tue Aug 26 14:42:53 CEST 2008
+#Wed Mar 18 09:22:36 CET 2009
 online_search_field_settings_dialog_size=600/450
 online_search_default_server=
 import_local_art_back_keywords=back
 enabled=true
 import_local_art_media_keywords=cd,dvd,media
+card_view_picture_order=
+online_search_query_full_details_initially=false
 import_local_art_front_keywords=front,cover,case
 table_view_settings_dialog_size=500/400
 online_search_default_mode=
-field_definitions={205/&/null/&/true/&/false/&/false}{51/&/null/&/true/&/false/&/false}{0/&/null/&/true/&/false/&/false}{201/&/null/&/true/&/false/&/false}{214/&/null/&/true/&/false/&/false}{206/&/null/&/true/&/false/&/false}{50/&/null/&/true/&/false/&/false}
+field_definitions={205/&/13050/&/null/&/true/&/false/&/false/&/false/&/Technical Information}{51/&/13050/&/null/&/true/&/false/&/false/&/false/&/Information}{0/&/13050/&/null/&/true/&/false/&/false/&/false/&/Information}{201/&/13050/&/null/&/true/&/false/&/false/&/false/&/null}{214/&/13050/&/null/&/true/&/false/&/false/&/false/&/null}{206/&/13050/&/null/&/true/&/false/&/false/&/false/&/Technical Information}{50/&/13050/&/null/&/true/&/false/&/false/&/false/&/Information}
 group_by=
 card_view_item_description=214\#
 table_column_order=214\#
