--- a/modules/user.properties
+++ b/modules/user.properties
@@ -1,14 +1,16 @@
 #
-#Tue Aug 26 14:48:46 CEST 2008
+#Wed Mar 18 09:22:36 CET 2009
 online_search_field_settings_dialog_size=600/450
 online_search_default_server=
 import_local_art_back_keywords=back
 enabled=true
 import_local_art_media_keywords=cd,dvd,media
+card_view_picture_order=5\#
+online_search_query_full_details_initially=false
 import_local_art_front_keywords=front,cover,case
 table_view_settings_dialog_size=500/400
 online_search_default_mode=
-field_definitions={3/&/null/&/true/&/false/&/true}{1/&/null/&/true/&/false/&/false}{4/&/null/&/true/&/false/&/false}{7/&/null/&/true/&/false/&/false}{13/&/null/&/true/&/false/&/false}{11/&/null/&/true/&/false/&/false}{12/&/null/&/true/&/false/&/false}{205/&/null/&/true/&/false/&/false}{6/&/null/&/true/&/false/&/false}{2/&/null/&/true/&/false/&/false}{0/&/null/&/false/&/false/&/false}{201/&/null/&/true/&/false/&/false}{214/&/null/&/true/&/false/&/false}{206/&/null/&/true/&/false/&/false}{8/&/null/&/true/&/false/&/false}{9/&/null/&/true/&/false/&/false}{5/&/null/&/true/&/false/&/false}
+field_definitions={7/&/62/&/null/&/true/&/false/&/false/&/false/&/Information}{13/&/62/&/null/&/true/&/false/&/false/&/false/&/Information}{11/&/62/&/null/&/true/&/false/&/false/&/false/&/Information}{12/&/62/&/null/&/true/&/false/&/false/&/false/&/Information}{205/&/62/&/null/&/true/&/false/&/false/&/false/&/Technical Information}{4/&/62/&/null/&/true/&/false/&/false/&/false/&/Information}{6/&/62/&/null/&/true/&/false/&/false/&/false/&/Information}{2/&/62/&/null/&/true/&/false/&/false/&/false/&/Information}{0/&/62/&/null/&/true/&/false/&/false/&/false/&/Information}{201/&/62/&/null/&/true/&/false/&/false/&/false/&/null}{214/&/62/&/null/&/true/&/false/&/false/&/false/&/null}{1/&/62/&/null/&/true/&/false/&/false/&/false/&/Information}{206/&/62/&/null/&/true/&/false/&/false/&/false/&/Technical Information}{3/&/62/&/null/&/true/&/false/&/false/&/false/&/Information}{8/&/62/&/null/&/true/&/false/&/false/&/false/&/Information}{9/&/62/&/null/&/true/&/false/&/false/&/false/&/Information}{5/&/62/&/null/&/true/&/false/&/false/&/false/&/null}
 group_by=
 card_view_item_description=214\#
 table_column_order=214\#
@@ -25,7 +27,7 @@ file_import_dialog_size=550/600
 field_settings_dialog_size=500/300
 quick_view_settings_dialog_size=500/300
 auto_add_perfect_match=false
-quick_view_field_definitions={205/&/true/&/Horizontal/&/0}{4/&/true/&/Horizontal/&/0}{6/&/true/&/Horizontal/&/0}{2/&/false/&/Horizontal/&/0}{201/&/true/&/Horizontal/&/0}{214/&/true/&/Horizontal/&/0}{1/&/true/&/Horizontal/&/0}{206/&/true/&/Horizontal/&/0}{3/&/true/&/Horizontal/&/0}{5/&/false/&/Horizontal/&/0}
+quick_view_field_definitions={7/&/true/&/Horizontal/&/0}{13/&/false/&/Horizontal/&/0}{11/&/true/&/Horizontal/&/0}{12/&/true/&/Horizontal/&/0}{0/&/false/&/Horizontal/&/0}{8/&/true/&/Horizontal/&/0}{9/&/true/&/Horizontal/&/0}{205/&/true/&/Horizontal/&/0}{4/&/true/&/Horizontal/&/0}{6/&/true/&/Horizontal/&/0}{2/&/false/&/Horizontal/&/0}{201/&/true/&/Horizontal/&/0}{214/&/true/&/Horizontal/&/0}{1/&/true/&/Horizontal/&/0}{206/&/true/&/Horizontal/&/0}{3/&/true/&/Horizontal/&/0}{5/&/false/&/Horizontal/&/0}
 card_view_settings_dialog_size=500/400
 Simple_Item_Form_Size=450/550
 online_search_retrieved_fields=4\#214\#8\#11\#3\#7\#12\#205\#2\#13\#9\#201\#6\#206\#1\#5\#0\#
