--- a/_source/net/datacrow/core/resources/DcLabels.properties
+++ b/_source/net/datacrow/core/resources/DcLabels.properties
@@ -1,4 +1,6 @@
+lblTab=Tab
 lblTabs=Tabs
+lblTabDesign=Tab Design
 lblItemFormSettings=Item Form Settings
 lblAvailableFields=Available Fields
 lblSelectedFields=Selected Fields
@@ -481,6 +483,7 @@ lblQueryOut = Query result
 lblError = ERROR : 
 lblBackgroundColor = Background color
 lblUniqueness = Check for value uniqueness upon saving
+lblUnique = Unique
 lblRequired = Required ?
 lblMaximumSearchRes = Maximum search result
 lblProxyServerName = Proxy Server name
