--- a/modules/audiotrack.properties
+++ b/modules/audiotrack.properties
@@ -1,14 +1,16 @@
 #
-#Tue Aug 26 14:42:53 CEST 2008
+#Wed Mar 18 09:22:36 CET 2009
 online_search_field_settings_dialog_size=600/450
 online_search_default_server=
 import_local_art_back_keywords=back
 enabled=true
 import_local_art_media_keywords=cd,dvd,media
+card_view_picture_order=
+online_search_query_full_details_initially=false
 import_local_art_front_keywords=front,cover,case
 table_view_settings_dialog_size=500/400
 online_search_default_mode=
-field_definitions={214/&/null/&/true/&/false/&/false}{201/&/null/&/true/&/false/&/false}{0/&/null/&/true/&/false/&/false}{1/&/null/&/true/&/true/&/false}{150/&/null/&/true/&/false/&/false}{3/&/null/&/true/&/false/&/false}{151/&/null/&/true/&/false/&/false}{154/&/null/&/true/&/false/&/false}{2/&/null/&/true/&/false/&/false}{205/&/null/&/true/&/false/&/false}{6/&/null/&/true/&/false/&/false}{206/&/null/&/true/&/false/&/false}{152/&/null/&/true/&/false/&/false}{5/&/null/&/true/&/false/&/false}{4/&/null/&/false/&/false/&/false}{103/&/null/&/false/&/false/&/false}{105/&/null/&/false/&/false/&/false}{102/&/null/&/false/&/false/&/false}{101/&/null/&/false/&/false/&/false}{104/&/null/&/false/&/false/&/false}
+field_definitions={4/&/59/&/null/&/true/&/false/&/false/&/false/&/Technical Information}{6/&/59/&/null/&/true/&/false/&/false/&/false/&/Information}{205/&/59/&/null/&/true/&/false/&/false/&/false/&/Technical Information}{151/&/59/&/null/&/true/&/false/&/false/&/false/&/Information}{5/&/59/&/null/&/true/&/false/&/false/&/false/&/Information}{0/&/59/&/null/&/true/&/false/&/false/&/false/&/Information}{201/&/59/&/null/&/true/&/false/&/false/&/false/&/null}{214/&/59/&/null/&/true/&/false/&/false/&/false/&/null}{2/&/59/&/null/&/true/&/false/&/false/&/false/&/Information}{206/&/59/&/null/&/true/&/false/&/false/&/false/&/Technical Information}{3/&/59/&/null/&/true/&/false/&/false/&/false/&/Information}{154/&/59/&/null/&/true/&/false/&/false/&/false/&/Information}{150/&/59/&/null/&/true/&/false/&/false/&/false/&/Information}{1/&/59/&/null/&/true/&/false/&/false/&/false/&/Information}{101/&/59/&/null/&/true/&/false/&/false/&/false/&/Information}{104/&/59/&/null/&/true/&/false/&/false/&/false/&/Information}{105/&/59/&/null/&/true/&/false/&/false/&/false/&/Information}{102/&/59/&/null/&/true/&/false/&/false/&/false/&/Information}{103/&/59/&/null/&/true/&/false/&/false/&/false/&/Information}{152/&/59/&/null/&/true/&/false/&/false/&/false/&/Information}
 group_by=
 card_view_item_description=
 table_column_order=1\#150\#3\#
@@ -33,7 +35,7 @@ online_search_form_size=700/600
 import_local_art_recurses=true
 import_local_art=true
 import_cd_dialog_size=550/400
-web_field_definitions={4/&/100/&/0/&/false/&/false/&/false}{6/&/100/&/0/&/false/&/false/&/false}{205/&/100/&/0/&/true/&/false/&/false}{151/&/100/&/0/&/true/&/false/&/false}{5/&/100/&/0/&/false/&/false/&/false}{0/&/100/&/0/&/false/&/false/&/false}{201/&/100/&/0/&/true/&/false/&/false}{214/&/100/&/0/&/true/&/false/&/false}{153/&/100/&/0/&/true/&/false/&/false}{2/&/100/&/0/&/true/&/false/&/false}{206/&/100/&/0/&/true/&/false/&/false}{3/&/100/&/0/&/true/&/false/&/false}{154/&/100/&/0/&/true/&/false/&/false}{150/&/100/&/0/&/true/&/true/&/true}{1/&/100/&/0/&/true/&/false/&/false}{101/&/100/&/0/&/true/&/false/&/false}{104/&/100/&/0/&/true/&/false/&/false}{105/&/100/&/0/&/true/&/false/&/false}{102/&/100/&/0/&/true/&/false/&/false}{103/&/100/&/0/&/true/&/false/&/false}{152/&/100/&/0/&/true/&/false/&/false}
+web_field_definitions={4/&/100/&/0/&/false/&/false/&/false}{6/&/100/&/0/&/false/&/false/&/false}{205/&/100/&/0/&/true/&/false/&/false}{151/&/100/&/0/&/true/&/false/&/false}{5/&/100/&/0/&/false/&/false/&/false}{0/&/100/&/0/&/false/&/false/&/false}{201/&/100/&/0/&/true/&/false/&/false}{214/&/100/&/0/&/true/&/false/&/false}{2/&/100/&/0/&/true/&/false/&/false}{206/&/100/&/0/&/true/&/false/&/false}{3/&/100/&/0/&/true/&/false/&/false}{154/&/100/&/0/&/true/&/false/&/false}{150/&/100/&/0/&/true/&/true/&/true}{1/&/100/&/0/&/true/&/false/&/false}{101/&/100/&/0/&/true/&/false/&/false}{104/&/100/&/0/&/true/&/false/&/false}{105/&/100/&/0/&/true/&/false/&/false}{102/&/100/&/0/&/true/&/false/&/false}{103/&/100/&/0/&/true/&/false/&/false}{152/&/100/&/0/&/true/&/false/&/false}
 filter_dialog_size=700/400
 quick_filter_default_field=0
 simple_item_view_size=450/550
