--- a/modules/category.properties
+++ b/modules/category.properties
@@ -1,14 +1,16 @@
 #
-#Tue Aug 26 14:42:53 CEST 2008
+#Wed Mar 18 09:22:36 CET 2009
 online_search_field_settings_dialog_size=600/450
 online_search_default_server=
 import_local_art_back_keywords=back
 enabled=true
 import_local_art_media_keywords=cd,dvd,media
+card_view_picture_order=
+online_search_query_full_details_initially=false
 import_local_art_front_keywords=front,cover,case
 table_view_settings_dialog_size=500/400
 online_search_default_mode=
-field_definitions={205/&/null/&/true/&/false/&/false}{0/&/null/&/true/&/false/&/false}{151/&/null/&/true/&/false/&/false}{201/&/null/&/true/&/false/&/false}{214/&/null/&/true/&/false/&/false}{206/&/null/&/true/&/false/&/false}{150/&/null/&/true/&/false/&/false}
+field_definitions={205/&/10050/&/null/&/true/&/false/&/false/&/false/&/Technical Information}{0/&/10050/&/null/&/true/&/false/&/false/&/false/&/Information}{151/&/10050/&/null/&/true/&/false/&/false/&/false/&/null}{201/&/10050/&/null/&/true/&/false/&/false/&/false/&/null}{214/&/10050/&/null/&/true/&/false/&/false/&/false/&/null}{206/&/10050/&/null/&/true/&/false/&/false/&/false/&/Technical Information}{150/&/10050/&/null/&/true/&/false/&/false/&/false/&/Information}
 group_by=
 card_view_item_description=214\#
 table_column_order=214\#
