--- a/modules/container.properties
+++ b/modules/container.properties
@@ -1,19 +1,21 @@
 #
-#Thu Sep 25 09:56:33 CEST 2008
+#Wed Mar 18 09:22:36 CET 2009
 online_search_field_settings_dialog_size=600/450
 online_search_default_server=
 import_local_art_back_keywords=back
 enabled=true
 import_local_art_media_keywords=cd,dvd,media
 card_view_picture_order=
+online_search_query_full_details_initially=false
 import_local_art_front_keywords=front,cover,case
 table_view_settings_dialog_size=557/505
 online_search_default_mode=
-field_definitions={0/&/null/&/false/&/false/&/false}{1/&/null/&/true/&/true/&/true}{2/&/null/&/true/&/false/&/false}{202/&/null/&/true/&/false/&/false}{205/&/null/&/true/&/false/&/false}{204/&/null/&/true/&/false/&/false}{209/&/null/&/true/&/false/&/false}{212/&/null/&/true/&/false/&/false}{211/&/null/&/true/&/false/&/false}{210/&/null/&/true/&/false/&/false}{201/&/null/&/true/&/false/&/false}{214/&/null/&/true/&/false/&/false}{203/&/null/&/true/&/false/&/false}{206/&/null/&/true/&/false/&/false}{101/&/null/&/false/&/false/&/false}{104/&/null/&/false/&/false/&/false}{105/&/null/&/false/&/false/&/false}{102/&/null/&/false/&/false/&/false}{103/&/null/&/false/&/false/&/false}
+field_definitions={202/&/64/&/null/&/true/&/false/&/false/&/false/&/null}{2/&/64/&/null/&/true/&/false/&/false/&/false/&/Information}{205/&/64/&/null/&/true/&/false/&/false/&/false/&/Technical Information}{204/&/64/&/null/&/true/&/false/&/false/&/false/&/null}{216/&/64/&/null/&/true/&/false/&/false/&/false/&/null}{4/&/64/&/null/&/true/&/false/&/false/&/false/&/Information}{215/&/64/&/null/&/true/&/false/&/false/&/false/&/null}{209/&/64/&/null/&/true/&/false/&/false/&/false/&/Technical Information}{212/&/64/&/null/&/true/&/false/&/false/&/false/&/Technical Information}{211/&/64/&/null/&/true/&/false/&/false/&/false/&/Information}{210/&/64/&/null/&/true/&/false/&/false/&/false/&/Technical Information}{0/&/64/&/null/&/true/&/false/&/false/&/false/&/Information}{201/&/64/&/null/&/true/&/false/&/false/&/false/&/null}{214/&/64/&/null/&/true/&/false/&/false/&/false/&/null}{203/&/64/&/null/&/true/&/false/&/false/&/false/&/null}{206/&/64/&/null/&/true/&/false/&/false/&/false/&/Technical Information}{1/&/64/&/null/&/true/&/false/&/false/&/false/&/Information}{3/&/64/&/null/&/true/&/false/&/false/&/false/&/null}{101/&/64/&/null/&/true/&/false/&/false/&/false/&/Information}{104/&/64/&/null/&/true/&/false/&/false/&/false/&/Information}{105/&/64/&/null/&/true/&/false/&/false/&/false/&/Information}{102/&/64/&/null/&/true/&/false/&/false/&/false/&/Information}{103/&/64/&/null/&/true/&/false/&/false/&/false/&/Information}
 group_by=1\#
 card_view_item_description=
 table_column_order=214\#
 online_search_default_region=
+tree_panel_shown_items=65
 auto_create_subitems=true
 loan_form_size=500/500
 web_field_settings_dialog_size=500/300
@@ -26,7 +28,7 @@ file_import_dialog_size=550/600
 field_settings_dialog_size=525/556
 quick_view_settings_dialog_size=575/456
 auto_add_perfect_match=false
-quick_view_field_definitions={2/&/false/&/Horizontal/&/0}{209/&/true/&/Horizontal/&/0}{212/&/true/&/Horizontal/&/0}{211/&/true/&/Horizontal/&/0}{210/&/true/&/Horizontal/&/0}{0/&/false/&/Horizontal/&/0}{1/&/true/&/Horizontal/&/0}{101/&/true/&/Horizontal/&/0}{104/&/true/&/Horizontal/&/0}{105/&/true/&/Horizontal/&/0}{102/&/true/&/Horizontal/&/0}{103/&/true/&/Horizontal/&/0}{202/&/false/&/Horizontal/&/0}{205/&/false/&/Horizontal/&/0}{204/&/false/&/Horizontal/&/0}{201/&/true/&/Horizontal/&/0}{214/&/false/&/Horizontal/&/0}{203/&/false/&/Horizontal/&/0}{206/&/false/&/Horizontal/&/0}
+quick_view_field_definitions={216/&/true/&/Horizontal/&/0}{4/&/true/&/Horizontal/&/0}{215/&/false/&/Horizontal/&/0}{3/&/false/&/Horizontal/&/0}{2/&/false/&/Horizontal/&/0}{209/&/true/&/Horizontal/&/0}{212/&/true/&/Horizontal/&/0}{211/&/true/&/Horizontal/&/0}{210/&/true/&/Horizontal/&/0}{0/&/false/&/Horizontal/&/0}{1/&/true/&/Horizontal/&/0}{101/&/true/&/Horizontal/&/0}{104/&/true/&/Horizontal/&/0}{105/&/true/&/Horizontal/&/0}{102/&/true/&/Horizontal/&/0}{103/&/true/&/Horizontal/&/0}{202/&/false/&/Horizontal/&/0}{205/&/false/&/Horizontal/&/0}{204/&/false/&/Horizontal/&/0}{201/&/true/&/Horizontal/&/0}{214/&/false/&/Horizontal/&/0}{203/&/false/&/Horizontal/&/0}{206/&/false/&/Horizontal/&/0}
 card_view_settings_dialog_size=500/400
 Simple_Item_Form_Size=450/550
 online_search_retrieved_fields=210\#214\#203\#104\#209\#103\#204\#205\#105\#212\#201\#102\#1\#206\#211\#202\#0\#101\#
@@ -34,7 +36,7 @@ online_search_form_size=700/600
 import_local_art_recurses=true
 import_local_art=true
 import_cd_dialog_size=600/900
-web_field_definitions={2/&/100/&/0/&/false/&/false/&/false}{202/&/100/&/0/&/false/&/false/&/false}{205/&/100/&/0/&/true/&/false/&/false}{204/&/100/&/0/&/true/&/false/&/false}{209/&/100/&/0/&/true/&/false/&/false}{212/&/100/&/0/&/true/&/false/&/false}{211/&/100/&/0/&/true/&/false/&/false}{210/&/100/&/0/&/true/&/false/&/false}{0/&/100/&/0/&/false/&/false/&/false}{201/&/100/&/0/&/true/&/false/&/false}{214/&/100/&/0/&/true/&/false/&/false}{203/&/100/&/0/&/false/&/false/&/false}{206/&/100/&/0/&/true/&/false/&/false}{1/&/100/&/0/&/true/&/false/&/false}{101/&/100/&/0/&/true/&/false/&/false}{104/&/100/&/0/&/true/&/false/&/false}{105/&/100/&/0/&/true/&/false/&/false}{102/&/100/&/0/&/true/&/false/&/false}{103/&/100/&/0/&/true/&/false/&/false}
+web_field_definitions={216/&/100/&/0/&/true/&/false/&/false}{4/&/100/&/0/&/true/&/false/&/false}{215/&/100/&/0/&/false/&/false/&/false}{3/&/100/&/0/&/false/&/false/&/false}{2/&/100/&/0/&/false/&/false/&/false}{202/&/100/&/0/&/false/&/false/&/false}{205/&/100/&/0/&/true/&/false/&/false}{204/&/100/&/0/&/true/&/false/&/false}{209/&/100/&/0/&/true/&/false/&/false}{212/&/100/&/0/&/true/&/false/&/false}{211/&/100/&/0/&/true/&/false/&/false}{210/&/100/&/0/&/true/&/false/&/false}{0/&/100/&/0/&/false/&/false/&/false}{201/&/100/&/0/&/true/&/false/&/false}{214/&/100/&/0/&/true/&/false/&/false}{203/&/100/&/0/&/false/&/false/&/false}{206/&/100/&/0/&/true/&/false/&/false}{1/&/100/&/0/&/true/&/false/&/false}{101/&/100/&/0/&/true/&/false/&/false}{104/&/100/&/0/&/true/&/false/&/false}{105/&/100/&/0/&/true/&/false/&/false}{102/&/100/&/0/&/true/&/false/&/false}{103/&/100/&/0/&/true/&/false/&/false}
 filter_dialog_size=700/400
 quick_filter_default_field=0
 simple_item_view_size=450/550
