--- a/modules/musicartist.properties
+++ b/modules/musicartist.properties
@@ -1,14 +1,16 @@
 #
-#Tue Aug 26 14:42:53 CEST 2008
+#Wed Mar 18 09:22:36 CET 2009
 online_search_field_settings_dialog_size=600/450
 online_search_default_server=MusicBrainz
 import_local_art_back_keywords=back
 enabled=true
 import_local_art_media_keywords=cd,dvd,media
+card_view_picture_order=4\#
+online_search_query_full_details_initially=false
 import_local_art_front_keywords=front,cover,case
 table_view_settings_dialog_size=500/400
 online_search_default_mode=
-field_definitions={5/&/null/&/true/&/false/&/false}{214/&/null/&/true/&/false/&/false}{6/&/null/&/true/&/false/&/false}{0/&/null/&/false/&/false/&/false}{1/&/null/&/true/&/true/&/true}{2/&/null/&/true/&/false/&/false}{3/&/null/&/true/&/false/&/false}{205/&/null/&/true/&/false/&/false}{206/&/null/&/true/&/false/&/false}{201/&/null/&/true/&/false/&/false}{4/&/null/&/true/&/false/&/false}{207/&/null/&/true/&/false/&/false}{208/&/null/&/true/&/false/&/false}{101/&/null/&/false/&/false/&/false}{104/&/null/&/false/&/false/&/false}{102/&/null/&/false/&/false/&/false}{105/&/null/&/false/&/false/&/false}{103/&/null/&/false/&/false/&/false}
+field_definitions={205/&/36000/&/null/&/true/&/false/&/false/&/false/&/Technical Information}{2/&/36000/&/null/&/true/&/false/&/false/&/false/&/Information}{5/&/36000/&/null/&/true/&/false/&/false/&/false/&/Information}{0/&/36000/&/null/&/true/&/false/&/false/&/false/&/Information}{201/&/36000/&/null/&/true/&/false/&/false/&/false/&/null}{214/&/36000/&/null/&/true/&/false/&/false/&/false/&/null}{6/&/36000/&/null/&/true/&/false/&/false/&/false/&/Information}{206/&/36000/&/null/&/true/&/false/&/false/&/false/&/Technical Information}{1/&/36000/&/null/&/true/&/false/&/false/&/false/&/Information}{4/&/36000/&/null/&/true/&/false/&/false/&/false/&/null}{207/&/36000/&/null/&/true/&/false/&/false/&/false/&/Technical Information}{208/&/36000/&/null/&/true/&/false/&/false/&/false/&/Technical Information}{101/&/36000/&/null/&/true/&/false/&/false/&/false/&/Information}{104/&/36000/&/null/&/true/&/false/&/false/&/false/&/Information}{105/&/36000/&/null/&/true/&/false/&/false/&/false/&/Information}{102/&/36000/&/null/&/true/&/false/&/false/&/false/&/Information}{103/&/36000/&/null/&/true/&/false/&/false/&/false/&/Information}{3/&/36000/&/null/&/true/&/false/&/false/&/false/&/Information}
 group_by=1\#
 card_view_item_description=
 table_column_order=6\#5\#
@@ -25,7 +27,7 @@ file_import_dialog_size=550/800
 field_settings_dialog_size=500/300
 quick_view_settings_dialog_size=537/428
 auto_add_perfect_match=false
-quick_view_field_definitions={5/&/true/&/Horizontal/&/0}{6/&/true/&/Horizontal/&/0}{2/&/true/&/Vertical/&/0}{1/&/false/&/Horizontal/&/0}{214/&/false/&/Horizontal/&/0}{3/&/false/&/Horizontal/&/0}{205/&/false/&/Horizontal/&/0}{206/&/false/&/Horizontal/&/0}{207/&/false/&/Horizontal/&/0}{208/&/false/&/Horizontal/&/0}{201/&/false/&/Horizontal/&/0}{4/&/true/&/Horizontal/&/0}
+quick_view_field_definitions={0/&/false/&/Horizontal/&/0}{101/&/true/&/Horizontal/&/0}{104/&/true/&/Horizontal/&/0}{105/&/true/&/Horizontal/&/0}{102/&/true/&/Horizontal/&/0}{103/&/true/&/Horizontal/&/0}{5/&/true/&/Horizontal/&/0}{6/&/true/&/Horizontal/&/0}{2/&/true/&/Vertical/&/0}{1/&/false/&/Horizontal/&/0}{214/&/false/&/Horizontal/&/0}{3/&/false/&/Horizontal/&/0}{205/&/false/&/Horizontal/&/0}{206/&/false/&/Horizontal/&/0}{207/&/false/&/Horizontal/&/0}{208/&/false/&/Horizontal/&/0}{201/&/false/&/Horizontal/&/0}{4/&/true/&/Horizontal/&/0}
 card_view_settings_dialog_size=500/400
 Simple_Item_Form_Size=450/550
 online_search_retrieved_fields=207\#205\#4\#3\#206\#201\#2\#0\#208\#1\#
