--- a/resources/Dutch_resources.properties
+++ b/resources/Dutch_resources.properties
@@ -1,5 +1,8 @@
 msgTabDeleteNoRowSelected = Selecteer eerst een tab van de tabel
 lblItemFormSettings=Formulier Instellingen
+lblTabs=Tabs
+lblTab=Tab
+lblTabDesign=Tab Design
 sysUserFieldName=Naam
 sysSoftwareFieldScreenshotThree=Schermafbeelding 3
 msgMassUpdateMethodHasNotBeenDefined=Selecteer een online service en/of geef aan bestanden opnieuw te willen verwerken
