*** empty log message ***

--- a/_source/net/datacrow/core/resources/DcLabels.properties
+++ b/_source/net/datacrow/core/resources/DcLabels.properties
@@ -483,8 +483,8 @@ lblQueryOut = Query result
 lblError = ERROR : 
 lblBackgroundColor = Background color
 lblUniqueness = Check for value uniqueness upon saving
-lblUnique = Unique
-lblRequired = Required ?
+lblUnique = Key
+lblRequired = Required
 lblMaximumSearchRes = Maximum search result
 lblProxyServerName = Proxy Server name
 lblProxyServerPort = Proxy Server port
