--- a/resources/Dutch_resources.properties
+++ b/resources/Dutch_resources.properties
@@ -1,5 +1,6 @@
 msgTabDeleteNoRowSelected = Selecteer eerst een tab van de tabel
 lblItemFormSettings=Formulier Instellingen
+lblUnique=Sleutel
 lblTabs=Tabs
 lblTab=Tab
 lblTabDesign=Tab Design
@@ -1151,7 +1152,7 @@ lblModule=Module
 sysSoftware_stateFieldItem=Item
 sysBookFieldUserShortText1=Gebruikersveld - Text kort 1
 lblNewFields=New Field
-msgItemNotUnique=Item %1 is niet uniek. Dit item is reeds aanwezig in de database
+msgItemNotUnique=Item %1 is niet uniek. De controle is gebaseerd op de sleutel velden (%2).
 lblFind=Zoeken
 sysMusicalbumFieldserviceurl=Service URL
 msgApplicationStops=Data Crow wordt, netjes, afgesloten
