--- a/resources/French_resources.properties
+++ b/resources/French_resources.properties
@@ -1229,7 +1229,7 @@ lblModule=Module
 sysSoftware_stateFieldItem=Objet
 sysBookFieldUserShortText1=Texte court 1 perso
 lblNewFields=Nouveau champ
-msgItemNotUnique=L'objet %1 n'est pas unique, il est deja present dans la base. Changez un des champs obligatoires.
+msgItemNotUnique=L'objet %1 n'est pas unique, il est deja present dans la base. Changez un des champs cle. (%2).
 lblFind=Trouver
 sysMusicalbumFieldserviceurl=URL fournisseur
 msgApplicationStops=Data Crow vous informe aimablement de sa fermeture en cours
