--- a/resources/German_resources.properties
+++ b/resources/German_resources.properties
@@ -622,7 +622,7 @@ lblAllItemsInView=Alle angezeigten Elemente
 lblRotateLeft=Nach links drehen
 sysAudiotrackFieldLyric=Lyrics
 sysImageFieldUserShortText1=User Short Text Field 1
-msgItemNotUnique=Element %1 ist nicht einmalig, es existiert bereits in der Datenbank. Bitte ändern Sie eins der Muss-Felder!
+msgItemNotUnique=Element %1 ist nicht einmalig, es existiert bereits in der Datenbank. Bitte ändern Sie eins der Muss-Felder! (%2)
 lblSelectRelatedItems=Select related items
 lblAskPerDir=Jedes Verzeichnis bestätigen
 sysImage_state=Status
