--- a/_source/net/datacrow/core/resources/DcMessages.properties
+++ b/_source/net/datacrow/core/resources/DcMessages.properties
@@ -248,7 +248,7 @@ msgViewCleared = The view has been cleared
 msgSettingsSaved = Settings have been saved and applied
 msgSQLTableHasBeenFilled = The view has been filled
 msgMissingRequiredValues = Required fields have been left empty. Fill required field(s) %1 for item %2
-msgItemNotUnique = Item %1 is not unique, it already exists in the database. Change one of the required fields!
+msgItemNotUnique = Item %1 is not unique, it already exists. The check is based on the combination of the key fields (%2).
 msgStartImportJob = Starting the import from directory : %1
 msgParsingXFiles = Starting to parse %1 files
 msgParsing = Parsing %1
