*** empty log message ***

--- a/modules/audiotrack.properties
+++ b/modules/audiotrack.properties
@@ -1,5 +1,5 @@
 #
-#Wed Mar 18 09:22:36 CET 2009
+#Sat Mar 21 14:48:16 EDT 2009
 online_search_field_settings_dialog_size=600/450
 online_search_default_server=
 import_local_art_back_keywords=back
@@ -10,7 +10,7 @@ online_search_query_full_details_initially=false
 import_local_art_front_keywords=front,cover,case
 table_view_settings_dialog_size=500/400
 online_search_default_mode=
-field_definitions={4/&/59/&/null/&/true/&/false/&/false/&/false/&/Technical Information}{6/&/59/&/null/&/true/&/false/&/false/&/false/&/Information}{205/&/59/&/null/&/true/&/false/&/false/&/false/&/Technical Information}{151/&/59/&/null/&/true/&/false/&/false/&/false/&/Information}{5/&/59/&/null/&/true/&/false/&/false/&/false/&/Information}{0/&/59/&/null/&/true/&/false/&/false/&/false/&/Information}{201/&/59/&/null/&/true/&/false/&/false/&/false/&/null}{214/&/59/&/null/&/true/&/false/&/false/&/false/&/null}{2/&/59/&/null/&/true/&/false/&/false/&/false/&/Information}{206/&/59/&/null/&/true/&/false/&/false/&/false/&/Technical Information}{3/&/59/&/null/&/true/&/false/&/false/&/false/&/Information}{154/&/59/&/null/&/true/&/false/&/false/&/false/&/Information}{150/&/59/&/null/&/true/&/false/&/false/&/false/&/Information}{1/&/59/&/null/&/true/&/false/&/false/&/false/&/Information}{101/&/59/&/null/&/true/&/false/&/false/&/false/&/Information}{104/&/59/&/null/&/true/&/false/&/false/&/false/&/Information}{105/&/59/&/null/&/true/&/false/&/false/&/false/&/Information}{102/&/59/&/null/&/true/&/false/&/false/&/false/&/Information}{103/&/59/&/null/&/true/&/false/&/false/&/false/&/Information}{152/&/59/&/null/&/true/&/false/&/false/&/false/&/Information}
+field_definitions={214/&/null/&/true/&/false/&/false/&/false/&/null}{201/&/null/&/true/&/false/&/false/&/false/&/null}{0/&/null/&/true/&/false/&/false/&/false/&/null}{1/&/null/&/true/&/true/&/false/&/false/&/null}{150/&/null/&/true/&/false/&/false/&/false/&/null}{3/&/null/&/true/&/false/&/false/&/false/&/null}{151/&/null/&/true/&/false/&/false/&/false/&/null}{154/&/null/&/true/&/false/&/false/&/false/&/null}{2/&/null/&/true/&/false/&/false/&/false/&/null}{205/&/null/&/true/&/false/&/false/&/false/&/null}{6/&/null/&/true/&/false/&/false/&/false/&/null}{206/&/null/&/true/&/false/&/false/&/false/&/null}{152/&/null/&/true/&/false/&/false/&/false/&/null}{5/&/null/&/true/&/false/&/false/&/false/&/null}{4/&/null/&/false/&/false/&/false/&/false/&/null}{103/&/null/&/false/&/false/&/false/&/false/&/null}{105/&/null/&/false/&/false/&/false/&/false/&/null}{102/&/null/&/false/&/false/&/false/&/false/&/null}{101/&/null/&/false/&/false/&/false/&/false/&/null}{104/&/null/&/false/&/false/&/false/&/false/&/null}
 group_by=
 card_view_item_description=
 table_column_order=1\#150\#3\#
