--- a/modules/state.properties
+++ b/modules/state.properties
@@ -1,5 +1,5 @@
 #
-#Wed Mar 18 09:22:36 CET 2009
+#Sat Mar 21 14:48:16 EDT 2009
 online_search_field_settings_dialog_size=600/450
 online_search_default_server=
 import_local_art_back_keywords=back
@@ -10,7 +10,7 @@ online_search_query_full_details_initially=false
 import_local_art_front_keywords=front,cover,case
 table_view_settings_dialog_size=500/400
 online_search_default_mode=
-field_definitions={205/&/15050/&/null/&/true/&/false/&/false/&/false/&/Technical Information}{0/&/15050/&/null/&/true/&/false/&/false/&/false/&/Information}{151/&/15050/&/null/&/true/&/false/&/false/&/false/&/null}{201/&/15050/&/null/&/true/&/false/&/false/&/false/&/null}{214/&/15050/&/null/&/true/&/false/&/false/&/false/&/null}{206/&/15050/&/null/&/true/&/false/&/false/&/false/&/Technical Information}{150/&/15050/&/null/&/true/&/false/&/false/&/false/&/Information}
+field_definitions={205/&/null/&/true/&/false/&/false/&/false/&/null}{0/&/null/&/true/&/false/&/false/&/false/&/null}{151/&/null/&/true/&/false/&/false/&/false/&/null}{201/&/null/&/true/&/false/&/false/&/false/&/null}{214/&/null/&/true/&/false/&/false/&/false/&/null}{206/&/null/&/true/&/false/&/false/&/false/&/null}{150/&/null/&/true/&/false/&/false/&/false/&/null}
 group_by=
 card_view_item_description=214\#
 table_column_order=214\#
@@ -27,15 +27,15 @@ file_import_dialog_size=550/600
 field_settings_dialog_size=500/300
 quick_view_settings_dialog_size=500/300
 auto_add_perfect_match=false
-quick_view_field_definitions={205/&/true/&/Horizontal/&/0}{0/&/false/&/Horizontal/&/0}{151/&/false/&/Horizontal/&/0}{201/&/true/&/Horizontal/&/0}{214/&/true/&/Horizontal/&/0}{206/&/true/&/Horizontal/&/0}{150/&/true/&/Horizontal/&/0}
+quick_view_field_definitions={205/&/false/&/Horizontal/&/0}{0/&/false/&/Horizontal/&/0}{151/&/false/&/Horizontal/&/0}{201/&/true/&/Horizontal/&/0}{214/&/true/&/Horizontal/&/0}{206/&/false/&/Horizontal/&/0}{150/&/true/&/Horizontal/&/0}
 card_view_settings_dialog_size=500/400
 Simple_Item_Form_Size=450/550
-online_search_retrieved_fields=205\#151\#214\#201\#206\#150\#0\#
+online_search_retrieved_fields=205\#0\#206\#201\#214\#150\#151\#
 online_search_form_size=700/600
 import_local_art_recurses=true
 import_local_art=true
 import_cd_dialog_size=600/900
-web_field_definitions={205/&/100/&/0/&/true/&/false/&/false}{0/&/100/&/0/&/false/&/false/&/false}{151/&/100/&/0/&/false/&/false/&/false}{201/&/100/&/0/&/true/&/false/&/false}{214/&/100/&/0/&/true/&/false/&/false}{206/&/100/&/0/&/true/&/false/&/false}{150/&/100/&/0/&/true/&/true/&/true}
+web_field_definitions={205/&/100/&/0/&/false/&/false/&/false}{0/&/100/&/0/&/false/&/false/&/false}{151/&/100/&/0/&/false/&/false/&/false}{201/&/100/&/0/&/true/&/false/&/false}{214/&/100/&/0/&/true/&/false/&/false}{206/&/100/&/0/&/false/&/false/&/false}{150/&/100/&/0/&/true/&/true/&/true}
 filter_dialog_size=700/400
 quick_filter_default_field=0
 simple_item_view_size=450/550
