--- a/resources/Dutch_resources.properties
+++ b/resources/Dutch_resources.properties
@@ -1,3 +1,4 @@
+lblAlterField=Wijzigen
 msgTabDeleteNoRowSelected = Selecteer eerst een tab van de tabel
 lblItemFormSettings=Formulier Instellingen
 lblUnique=Sleutel
@@ -1122,7 +1123,7 @@ lblInsertText=Tekst invoegen
 sysDirectorFieldFirstname=Voornaam
 0x0002=Microsoft ADPCM Format
 0x0086=DF GSM610
-sysMovieFieldAudioLanguage=Audio Language
+sysMovieFieldAudioLanguage=Gesproken Taal
 lblRecursiveDir=Zoek ook in sub directories
 0x0100=Rhetorex ADPCM
 sysMovie_genreFieldIcon=Icoon
