--- a/modules/contactperson.properties
+++ b/modules/contactperson.properties
@@ -1,5 +1,5 @@
 #
-#Wed Mar 18 09:22:36 CET 2009
+#Sat Mar 21 14:48:16 EDT 2009
 online_search_field_settings_dialog_size=600/450
 online_search_default_server=
 import_local_art_back_keywords=back
@@ -10,14 +10,14 @@ online_search_query_full_details_initially=false
 import_local_art_front_keywords=front,cover,case
 table_view_settings_dialog_size=500/400
 online_search_default_mode=
-field_definitions={6/&/56/&/null/&/true/&/false/&/false/&/false/&/Information}{4/&/56/&/null/&/true/&/false/&/false/&/false/&/Information}{9/&/56/&/null/&/true/&/false/&/false/&/false/&/Information}{10/&/56/&/null/&/true/&/false/&/false/&/false/&/Information}{205/&/56/&/null/&/true/&/false/&/false/&/false/&/Technical Information}{2/&/56/&/null/&/true/&/false/&/false/&/false/&/Information}{5/&/56/&/null/&/true/&/false/&/false/&/false/&/Information}{0/&/56/&/null/&/true/&/false/&/false/&/false/&/Information}{201/&/56/&/null/&/true/&/false/&/false/&/false/&/null}{214/&/56/&/null/&/true/&/false/&/false/&/false/&/null}{206/&/56/&/null/&/true/&/false/&/false/&/false/&/Technical Information}{1/&/56/&/null/&/true/&/false/&/false/&/false/&/Information}{7/&/56/&/null/&/true/&/false/&/false/&/false/&/Information}{8/&/56/&/null/&/true/&/false/&/false/&/false/&/Information}{3/&/56/&/null/&/true/&/false/&/false/&/false/&/null}{101/&/56/&/null/&/true/&/false/&/false/&/false/&/Information}{104/&/56/&/null/&/true/&/false/&/false/&/false/&/Information}{105/&/56/&/null/&/true/&/false/&/false/&/false/&/Information}{102/&/56/&/null/&/true/&/false/&/false/&/false/&/Information}{103/&/56/&/null/&/true/&/false/&/false/&/false/&/Information}
+field_definitions={0/&/null/&/true/&/false/&/false/&/false/&/null}{1/&/null/&/true/&/true/&/false/&/false/&/null}{4/&/null/&/true/&/false/&/false/&/false/&/null}{2/&/null/&/true/&/false/&/false/&/false/&/null}{214/&/null/&/false/&/false/&/false/&/false/&/null}{9/&/null/&/true/&/false/&/false/&/false/&/null}{10/&/null/&/true/&/false/&/false/&/false/&/null}{3/&/null/&/true/&/false/&/false/&/false/&/null}{8/&/null/&/true/&/false/&/false/&/false/&/null}{6/&/null/&/true/&/false/&/false/&/false/&/null}{7/&/null/&/true/&/false/&/false/&/false/&/null}{5/&/null/&/true/&/true/&/false/&/false/&/null}{205/&/null/&/true/&/false/&/false/&/false/&/null}{206/&/null/&/true/&/false/&/false/&/false/&/null}{201/&/null/&/true/&/false/&/false/&/false/&/null}{101/&/null/&/false/&/false/&/false/&/false/&/null}{104/&/null/&/false/&/false/&/false/&/false/&/null}{105/&/null/&/false/&/false/&/false/&/false/&/null}{102/&/null/&/false/&/false/&/false/&/false/&/null}{103/&/null/&/false/&/false/&/false/&/false/&/null}
 group_by=
 card_view_item_description=
-table_column_order=
+table_column_order=1\#4\#7\#5\#
 online_search_default_region=
 auto_create_subitems=true
 loan_form_size=500/500
-web_field_settings_dialog_size=500/300
+web_field_settings_dialog_size=491/463
 search_order=
 item_form_size=700/600
 title_cleanup=axxo,dvdrip,cdrip,dvd-rip,cd-rip
@@ -25,9 +25,9 @@ online_search_field_overwrite_settings=
 online_search_overwrite=false
 file_import_dialog_size=550/800
 field_settings_dialog_size=491/463
-quick_view_settings_dialog_size=500/300
+quick_view_settings_dialog_size=555/484
 auto_add_perfect_match=false
-quick_view_field_definitions={214/&/true/&/Horizontal/&/0}{9/&/true/&/Horizontal/&/0}{10/&/true/&/Horizontal/&/0}{101/&/true/&/Horizontal/&/0}{104/&/true/&/Horizontal/&/0}{105/&/true/&/Horizontal/&/0}{102/&/true/&/Horizontal/&/0}{103/&/true/&/Horizontal/&/0}{201/&/true/&/Horizontal/&/0}{0/&/false/&/Horizontal/&/0}{1/&/true/&/Horizontal/&/0}{2/&/true/&/Vertical/&/0}{205/&/true/&/Horizontal/&/0}{4/&/false/&/Horizontal/&/0}{6/&/true/&/Horizontal/&/0}{206/&/true/&/Horizontal/&/0}{3/&/false/&/Horizontal/&/0}{8/&/true/&/Horizontal/&/0}{7/&/true/&/Horizontal/&/0}{5/&/true/&/Horizontal/&/0}
+quick_view_field_definitions={214/&/false/&/Horizontal/&/0}{101/&/false/&/Horizontal/&/0}{104/&/false/&/Horizontal/&/0}{105/&/false/&/Horizontal/&/0}{102/&/false/&/Horizontal/&/0}{103/&/false/&/Horizontal/&/0}{1/&/true/&/Horizontal/&/0}{2/&/true/&/Vertical/&/0}{4/&/true/&/Horizontal/&/0}{6/&/true/&/Horizontal/&/0}{9/&/true/&/Horizontal/&/0}{10/&/true/&/Horizontal/&/0}{201/&/false/&/Horizontal/&/0}{0/&/false/&/Horizontal/&/0}{205/&/false/&/Horizontal/&/0}{206/&/false/&/Horizontal/&/0}{3/&/false/&/Horizontal/&/0}{8/&/true/&/Horizontal/&/0}{7/&/true/&/Horizontal/&/0}{5/&/true/&/Horizontal/&/0}
 card_view_settings_dialog_size=500/400
 Simple_Item_Form_Size=450/550
 online_search_retrieved_fields=2\#205\#4\#8\#6\#201\#1\#206\#3\#7\#5\#0\#
@@ -35,7 +35,7 @@ online_search_form_size=700/600
 import_local_art_recurses=true
 import_local_art=true
 import_cd_dialog_size=550/400
-web_field_definitions={6/&/100/&/0/&/true/&/false/&/false}{4/&/100/&/0/&/false/&/false/&/false}{9/&/100/&/0/&/true/&/false/&/false}{10/&/100/&/0/&/true/&/false/&/false}{205/&/100/&/0/&/true/&/false/&/false}{2/&/100/&/0/&/true/&/false/&/false}{5/&/100/&/0/&/true/&/false/&/false}{0/&/100/&/0/&/false/&/false/&/false}{201/&/100/&/0/&/true/&/false/&/false}{214/&/100/&/0/&/true/&/false/&/false}{206/&/100/&/0/&/true/&/false/&/false}{1/&/100/&/0/&/true/&/false/&/false}{7/&/100/&/0/&/true/&/false/&/false}{8/&/100/&/0/&/true/&/false/&/false}{3/&/100/&/0/&/false/&/false/&/false}{101/&/100/&/0/&/true/&/false/&/false}{104/&/100/&/0/&/true/&/false/&/false}{105/&/100/&/0/&/true/&/false/&/false}{102/&/100/&/0/&/true/&/false/&/false}{103/&/100/&/0/&/true/&/false/&/false}
+web_field_definitions={214/&/100/&/0/&/false/&/false/&/false}{1/&/100/&/0/&/true/&/true/&/true}{6/&/100/&/0/&/false/&/false/&/false}{2/&/200/&/400/&/true/&/false/&/true}{4/&/100/&/0/&/true/&/false/&/true}{5/&/150/&/0/&/true/&/false/&/true}{9/&/100/&/0/&/false/&/false/&/false}{10/&/100/&/0/&/false/&/false/&/false}{205/&/100/&/0/&/false/&/false/&/false}{0/&/100/&/0/&/false/&/false/&/false}{201/&/100/&/0/&/false/&/false/&/false}{206/&/100/&/0/&/false/&/false/&/false}{7/&/100/&/0/&/false/&/false/&/false}{8/&/100/&/0/&/false/&/false/&/false}{3/&/100/&/0/&/true/&/false/&/false}{101/&/100/&/0/&/false/&/false/&/false}{104/&/100/&/0/&/false/&/false/&/false}{105/&/100/&/0/&/false/&/false/&/false}{102/&/100/&/0/&/false/&/false/&/false}{103/&/100/&/0/&/false/&/false/&/false}
 filter_dialog_size=700/400
 quick_filter_default_field=0
 simple_item_view_size=450/550
