--- a/modules/loan.properties
+++ b/modules/loan.properties
@@ -1,5 +1,5 @@
 #
-#Wed Mar 18 09:22:36 CET 2009
+#Sat Mar 21 14:48:16 EDT 2009
 online_search_field_settings_dialog_size=600/450
 online_search_default_server=
 import_local_art_back_keywords=back
@@ -10,9 +10,9 @@ online_search_query_full_details_initially=false
 import_local_art_front_keywords=front,cover,case
 table_view_settings_dialog_size=500/400
 online_search_default_mode=
-field_definitions={3/&/61/&/null/&/true/&/false/&/false/&/false/&/Information}{205/&/61/&/null/&/true/&/false/&/false/&/false/&/Technical Information}{5/&/61/&/null/&/true/&/false/&/false/&/false/&/Information}{2/&/61/&/null/&/true/&/false/&/false/&/false/&/Information}{0/&/61/&/null/&/true/&/false/&/false/&/false/&/Information}{201/&/61/&/null/&/true/&/false/&/false/&/false/&/null}{214/&/61/&/null/&/true/&/false/&/false/&/false/&/null}{206/&/61/&/null/&/true/&/false/&/false/&/false/&/Technical Information}{4/&/61/&/null/&/true/&/false/&/false/&/false/&/Information}{1/&/61/&/null/&/true/&/false/&/false/&/false/&/Information}
+field_definitions={5/&/null/&/true/&/false/&/false/&/false/&/null}{214/&/null/&/true/&/false/&/false/&/false/&/null}{3/&/null/&/true/&/false/&/false/&/false/&/null}{205/&/null/&/true/&/false/&/false/&/false/&/null}{1/&/null/&/true/&/false/&/false/&/false/&/null}{2/&/null/&/true/&/false/&/false/&/false/&/null}{0/&/null/&/true/&/false/&/false/&/false/&/null}{201/&/null/&/true/&/false/&/false/&/false/&/null}{206/&/null/&/true/&/false/&/false/&/false/&/null}{4/&/null/&/true/&/false/&/false/&/false/&/null}
 group_by=
-card_view_item_description=214\#
+card_view_item_description=
 table_column_order=3\#1\#2\#
 online_search_default_region=
 auto_create_subitems=true
@@ -23,21 +23,21 @@ item_form_size=700/600
 title_cleanup=axxo,dvdrip,cdrip,dvd-rip,cd-rip
 online_search_field_overwrite_settings=
 online_search_overwrite=false
-file_import_dialog_size=550/600
+file_import_dialog_size=550/800
 field_settings_dialog_size=500/300
 quick_view_settings_dialog_size=500/300
 auto_add_perfect_match=false
-quick_view_field_definitions={3/&/false/&/Horizontal/&/0}{205/&/false/&/Horizontal/&/0}{5/&/false/&/Horizontal/&/0}{2/&/false/&/Horizontal/&/0}{0/&/false/&/Horizontal/&/0}{201/&/true/&/Horizontal/&/0}{214/&/true/&/Horizontal/&/0}{206/&/false/&/Horizontal/&/0}{4/&/false/&/Horizontal/&/0}{1/&/false/&/Horizontal/&/0}
+quick_view_field_definitions={5/&/false/&/Horizontal/&/0}{214/&/true/&/Horizontal/&/0}{3/&/false/&/Horizontal/&/0}{205/&/true/&/Horizontal/&/0}{2/&/false/&/Horizontal/&/0}{0/&/false/&/Horizontal/&/0}{201/&/true/&/Horizontal/&/0}{206/&/true/&/Horizontal/&/0}{4/&/false/&/Horizontal/&/0}{1/&/false/&/Horizontal/&/0}
 card_view_settings_dialog_size=500/400
 Simple_Item_Form_Size=450/550
-online_search_retrieved_fields=205\#0\#1\#2\#3\#206\#4\#201\#5\#214\#
+online_search_retrieved_fields=2\#205\#4\#201\#1\#206\#3\#0\#
 online_search_form_size=700/600
 import_local_art_recurses=true
 import_local_art=true
-import_cd_dialog_size=600/900
-web_field_definitions={3/&/100/&/0/&/false/&/false/&/false}{205/&/100/&/0/&/false/&/false/&/false}{5/&/100/&/0/&/false/&/false/&/false}{2/&/100/&/0/&/false/&/false/&/false}{0/&/100/&/0/&/false/&/false/&/false}{201/&/100/&/0/&/true/&/false/&/false}{214/&/100/&/0/&/true/&/false/&/false}{206/&/100/&/0/&/false/&/false/&/false}{4/&/100/&/0/&/false/&/false/&/false}{1/&/100/&/0/&/false/&/false/&/false}
+import_cd_dialog_size=550/400
+web_field_definitions={5/&/100/&/0/&/false/&/false/&/false}{3/&/100/&/0/&/false/&/false/&/false}{205/&/100/&/0/&/true/&/false/&/false}{2/&/100/&/0/&/false/&/false/&/false}{0/&/100/&/0/&/false/&/false/&/false}{201/&/100/&/0/&/true/&/false/&/false}{214/&/100/&/0/&/true/&/false/&/false}{206/&/100/&/0/&/true/&/false/&/false}{4/&/100/&/0/&/false/&/false/&/false}{1/&/100/&/0/&/false/&/false/&/false}
 filter_dialog_size=700/400
 quick_filter_default_field=0
 simple_item_view_size=450/550
 online_search_ub_items=false
-synchronizer_dialog_size=550/600
+synchronizer_dialog_size=550/400
