--- a/modules/media.properties
+++ b/modules/media.properties
@@ -1,5 +1,5 @@
 #
-#Wed Mar 18 09:22:36 CET 2009
+#Sat Mar 21 14:48:16 EDT 2009
 online_search_field_settings_dialog_size=600/450
 online_search_default_server=
 import_local_art_back_keywords=back
@@ -10,7 +10,7 @@ online_search_query_full_details_initially=false
 import_local_art_front_keywords=front,cover,case
 table_view_settings_dialog_size=500/400
 online_search_default_mode=
-field_definitions={202/&/57/&/null/&/true/&/false/&/false/&/false/&/null}{213/&/57/&/null/&/true/&/false/&/false/&/false/&/Information}{205/&/57/&/null/&/true/&/false/&/false/&/false/&/Technical Information}{204/&/57/&/null/&/true/&/false/&/false/&/false/&/null}{216/&/57/&/null/&/true/&/false/&/false/&/false/&/null}{151/&/57/&/null/&/true/&/false/&/false/&/false/&/Information}{215/&/57/&/null/&/true/&/false/&/false/&/false/&/null}{0/&/57/&/null/&/true/&/false/&/false/&/false/&/Information}{201/&/57/&/null/&/true/&/false/&/false/&/false/&/null}{214/&/57/&/null/&/true/&/false/&/false/&/false/&/null}{203/&/57/&/null/&/true/&/false/&/false/&/false/&/null}{206/&/57/&/null/&/true/&/false/&/false/&/false/&/Technical Information}{154/&/57/&/null/&/true/&/false/&/false/&/false/&/Information}{150/&/57/&/null/&/true/&/false/&/false/&/false/&/Information}{101/&/57/&/null/&/true/&/false/&/false/&/false/&/Information}{104/&/57/&/null/&/true/&/false/&/false/&/false/&/Information}{105/&/57/&/null/&/true/&/false/&/false/&/false/&/Information}{102/&/57/&/null/&/true/&/false/&/false/&/false/&/Information}{103/&/57/&/null/&/true/&/false/&/false/&/false/&/Information}{152/&/57/&/null/&/true/&/false/&/false/&/false/&/Information}
+field_definitions={216/&/null/&/true/&/false/&/false/&/false/&/null}{215/&/null/&/true/&/false/&/false/&/false/&/null}{0/&/null/&/false/&/false/&/false/&/false/&/null}{150/&/null/&/true/&/true/&/false/&/false/&/null}{201/&/null/&/true/&/false/&/false/&/false/&/null}{152/&/null/&/true/&/false/&/false/&/false/&/null}{213/&/null/&/true/&/false/&/false/&/false/&/null}{151/&/null/&/true/&/false/&/false/&/false/&/null}{203/&/null/&/true/&/false/&/false/&/false/&/null}{204/&/null/&/true/&/false/&/false/&/false/&/null}{205/&/null/&/true/&/false/&/false/&/false/&/null}{206/&/null/&/true/&/false/&/false/&/false/&/null}{154/&/null/&/true/&/false/&/false/&/false/&/null}{101/&/null/&/false/&/false/&/false/&/false/&/null}{103/&/null/&/false/&/false/&/false/&/false/&/null}{105/&/null/&/false/&/false/&/false/&/false/&/null}{102/&/null/&/false/&/false/&/false/&/false/&/null}{104/&/null/&/false/&/false/&/false/&/false/&/null}{214/&/null/&/false/&/false/&/false/&/false/&/null}{202/&/null/&/true/&/false/&/false/&/false/&/null}
 group_by=201\#152\#
 card_view_item_description=
 table_column_order=201\#150\#152\#154\#
