--- a/modules/softwarepublisher.properties
+++ b/modules/softwarepublisher.properties
@@ -1,5 +1,5 @@
 #
-#Wed Mar 18 09:22:36 CET 2009
+#Sat Mar 21 14:48:16 EDT 2009
 online_search_field_settings_dialog_size=600/450
 online_search_default_server=MobyGames
 import_local_art_back_keywords=back
@@ -10,14 +10,14 @@ online_search_query_full_details_initially=false
 import_local_art_front_keywords=front,cover,case
 table_view_settings_dialog_size=500/400
 online_search_default_mode=
-field_definitions={205/&/34000/&/null/&/true/&/false/&/false/&/false/&/Technical Information}{2/&/34000/&/null/&/true/&/false/&/false/&/false/&/Information}{5/&/34000/&/null/&/true/&/false/&/false/&/false/&/Information}{0/&/34000/&/null/&/true/&/false/&/false/&/false/&/Information}{201/&/34000/&/null/&/true/&/false/&/false/&/false/&/null}{214/&/34000/&/null/&/true/&/false/&/false/&/false/&/null}{6/&/34000/&/null/&/true/&/false/&/false/&/false/&/Information}{206/&/34000/&/null/&/true/&/false/&/false/&/false/&/Technical Information}{1/&/34000/&/null/&/true/&/false/&/false/&/false/&/Information}{4/&/34000/&/null/&/true/&/false/&/false/&/false/&/null}{207/&/34000/&/null/&/true/&/false/&/false/&/false/&/Technical Information}{208/&/34000/&/null/&/true/&/false/&/false/&/false/&/Technical Information}{101/&/34000/&/null/&/true/&/false/&/false/&/false/&/Information}{104/&/34000/&/null/&/true/&/false/&/false/&/false/&/Information}{105/&/34000/&/null/&/true/&/false/&/false/&/false/&/Information}{102/&/34000/&/null/&/true/&/false/&/false/&/false/&/Information}{103/&/34000/&/null/&/true/&/false/&/false/&/false/&/Information}{3/&/34000/&/null/&/true/&/false/&/false/&/false/&/Information}
+field_definitions={1/&/null/&/true/&/false/&/false/&/false/&/null}{5/&/null/&/true/&/false/&/false/&/false/&/null}{6/&/null/&/true/&/false/&/false/&/false/&/null}{214/&/null/&/true/&/false/&/false/&/false/&/null}{0/&/null/&/false/&/false/&/false/&/false/&/null}{2/&/null/&/true/&/false/&/false/&/false/&/null}{3/&/null/&/true/&/false/&/false/&/false/&/null}{205/&/null/&/true/&/false/&/false/&/false/&/null}{206/&/null/&/true/&/false/&/false/&/false/&/null}{4/&/null/&/true/&/false/&/false/&/false/&/null}{201/&/null/&/true/&/false/&/false/&/false/&/null}{207/&/null/&/true/&/false/&/false/&/false/&/null}{208/&/null/&/true/&/false/&/false/&/false/&/null}{104/&/null/&/false/&/false/&/false/&/false/&/null}{101/&/null/&/false/&/false/&/false/&/false/&/null}{105/&/null/&/false/&/false/&/false/&/false/&/null}{102/&/null/&/false/&/false/&/false/&/false/&/null}{103/&/null/&/false/&/false/&/false/&/false/&/null}
 group_by=1\#
 card_view_item_description=
 table_column_order=6\#5\#
 online_search_default_region=us
 auto_create_subitems=true
 loan_form_size=500/500
-web_field_settings_dialog_size=500/300
+web_field_settings_dialog_size=514/442
 search_order=Name\#
 item_form_size=700/600
 title_cleanup=axxo,dvdrip,cdrip,dvd-rip,cd-rip
@@ -27,7 +27,7 @@ file_import_dialog_size=550/800
 field_settings_dialog_size=514/442
 quick_view_settings_dialog_size=530/459
 auto_add_perfect_match=false
-quick_view_field_definitions={0/&/false/&/Horizontal/&/0}{101/&/true/&/Horizontal/&/0}{104/&/true/&/Horizontal/&/0}{105/&/true/&/Horizontal/&/0}{102/&/true/&/Horizontal/&/0}{103/&/true/&/Horizontal/&/0}{5/&/true/&/Horizontal/&/0}{214/&/false/&/Horizontal/&/0}{6/&/true/&/Horizontal/&/0}{2/&/true/&/Vertical/&/0}{207/&/false/&/Horizontal/&/0}{208/&/false/&/Horizontal/&/0}{201/&/false/&/Horizontal/&/0}{4/&/true/&/Horizontal/&/0}{1/&/true/&/Horizontal/&/0}{3/&/true/&/Horizontal/&/0}{205/&/true/&/Horizontal/&/0}{206/&/true/&/Horizontal/&/0}
+quick_view_field_definitions={0/&/false/&/Horizontal/&/0}{101/&/false/&/Horizontal/&/0}{104/&/false/&/Horizontal/&/0}{105/&/false/&/Horizontal/&/0}{102/&/false/&/Horizontal/&/0}{103/&/false/&/Horizontal/&/0}{5/&/false/&/Horizontal/&/0}{214/&/false/&/Horizontal/&/0}{1/&/true/&/Horizontal/&/0}{6/&/false/&/Horizontal/&/0}{2/&/true/&/Vertical/&/0}{207/&/false/&/Horizontal/&/0}{208/&/false/&/Horizontal/&/0}{201/&/false/&/Horizontal/&/0}{4/&/true/&/Horizontal/&/0}{3/&/true/&/Horizontal/&/0}{205/&/true/&/Horizontal/&/0}{206/&/true/&/Horizontal/&/0}
 card_view_settings_dialog_size=500/400
 Simple_Item_Form_Size=450/550
 online_search_retrieved_fields=207\#1\#201\#0\#206\#3\#205\#2\#208\#4\#
@@ -35,7 +35,7 @@ online_search_form_size=700/600
 import_local_art_recurses=true
 import_local_art=true
 import_cd_dialog_size=550/400
-web_field_definitions={205/&/100/&/0/&/true/&/false/&/false}{2/&/100/&/0/&/true/&/false/&/false}{5/&/100/&/0/&/true/&/false/&/false}{0/&/100/&/0/&/false/&/false/&/false}{201/&/100/&/0/&/true/&/false/&/false}{214/&/100/&/0/&/true/&/false/&/false}{6/&/100/&/0/&/true/&/false/&/false}{206/&/100/&/0/&/true/&/false/&/false}{1/&/100/&/0/&/true/&/false/&/false}{4/&/100/&/0/&/false/&/false/&/false}{207/&/100/&/0/&/true/&/false/&/false}{208/&/100/&/0/&/true/&/false/&/false}{101/&/100/&/0/&/true/&/false/&/false}{104/&/100/&/0/&/true/&/false/&/false}{105/&/100/&/0/&/true/&/false/&/false}{102/&/100/&/0/&/true/&/false/&/false}{103/&/100/&/0/&/true/&/false/&/false}{3/&/100/&/0/&/true/&/false/&/false}
+web_field_definitions={1/&/100/&/0/&/true/&/true/&/true}{205/&/100/&/0/&/false/&/false/&/false}{2/&/400/&/500/&/true/&/false/&/true}{5/&/100/&/0/&/false/&/false/&/false}{0/&/100/&/0/&/false/&/false/&/false}{201/&/100/&/0/&/false/&/false/&/false}{214/&/100/&/0/&/false/&/false/&/false}{6/&/100/&/0/&/false/&/false/&/false}{206/&/100/&/0/&/false/&/false/&/false}{3/&/100/&/0/&/true/&/false/&/false}{4/&/100/&/0/&/true/&/false/&/false}{207/&/100/&/0/&/false/&/false/&/false}{208/&/100/&/0/&/false/&/false/&/false}{101/&/100/&/0/&/false/&/false/&/false}{104/&/100/&/0/&/false/&/false/&/false}{105/&/100/&/0/&/false/&/false/&/false}{102/&/100/&/0/&/false/&/false/&/false}{103/&/100/&/0/&/false/&/false/&/false}
 filter_dialog_size=700/400
 quick_filter_default_field=0
 simple_item_view_size=450/550
