--- a/modules/tab.properties
+++ b/modules/tab.properties
@@ -1,5 +1,5 @@
 #
-#Wed Mar 18 09:22:36 CET 2009
+#Sat Mar 21 14:48:16 EDT 2009
 online_search_field_settings_dialog_size=600/450
 online_search_default_server=
 import_local_art_back_keywords=back
@@ -10,7 +10,7 @@ online_search_query_full_details_initially=false
 import_local_art_front_keywords=front,cover,case
 table_view_settings_dialog_size=500/400
 online_search_default_mode=
-field_definitions={205/&/18000/&/null/&/true/&/false/&/false/&/false/&/Technical Information}{0/&/18000/&/null/&/true/&/false/&/false/&/false/&/Information}{151/&/18000/&/null/&/true/&/false/&/false/&/false/&/null}{201/&/18000/&/null/&/true/&/false/&/false/&/false/&/null}{214/&/18000/&/null/&/true/&/false/&/false/&/false/&/null}{206/&/18000/&/null/&/true/&/false/&/false/&/false/&/Technical Information}{153/&/18000/&/null/&/true/&/false/&/false/&/false/&/Information}{150/&/18000/&/null/&/true/&/false/&/false/&/false/&/Information}{152/&/18000/&/null/&/true/&/false/&/false/&/false/&/Information}
+field_definitions={205/&/null/&/true/&/false/&/false/&/false/&/null}{0/&/null/&/true/&/false/&/false/&/false/&/null}{151/&/null/&/true/&/false/&/false/&/false/&/null}{201/&/null/&/true/&/false/&/false/&/false/&/null}{214/&/null/&/true/&/false/&/false/&/false/&/null}{206/&/null/&/true/&/false/&/false/&/false/&/null}{153/&/null/&/true/&/false/&/false/&/false/&/null}{150/&/null/&/true/&/false/&/false/&/false/&/null}{152/&/null/&/true/&/false/&/false/&/false/&/null}
 group_by=
 card_view_item_description=214\#
 table_column_order=214\#
