*** empty log message ***

--- a/log4j.properties
+++ b/log4j.properties
@@ -1,8 +1,8 @@
 #
-#Wed Mar 04 19:09:05 CET 2009
+#Thu Apr 16 16:46:01 CEST 2009
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
-log4j.appender.logfile.File=/D\:/development/projects/datacrow/data/data_crow.log
-log4j.rootLogger=info, textpane, logfile
+log4j.appender.logfile.File=/H\:/Development/projects/datacrow/data/data_crow.log
+log4j.rootLogger=debug, textpane, logfile, stdout
 log4j.appender.logfile.layout.ConversionPattern=%5p [%t] (%F\:%L) - %m%n
 log4j.appender.textpane=net.datacrow.util.logging.TextPaneAppender
 log4j.appender.stdout.layout.ConversionPattern=%5p [%t] (%F\:%L) - %m%n
