--- a/modules/softwarepublisher.properties
+++ b/modules/softwarepublisher.properties
@@ -1,5 +1,5 @@
 #
-#Sat Mar 21 14:48:16 EDT 2009
+#Fri Jan 09 23:30:07 CET 2009
 online_search_field_settings_dialog_size=600/450
 online_search_default_server=MobyGames
 import_local_art_back_keywords=back
@@ -10,7 +10,7 @@ online_search_query_full_details_initially=false
 import_local_art_front_keywords=front,cover,case
 table_view_settings_dialog_size=500/400
 online_search_default_mode=
-field_definitions={1/&/null/&/true/&/false/&/false/&/false/&/null}{5/&/null/&/true/&/false/&/false/&/false/&/null}{6/&/null/&/true/&/false/&/false/&/false/&/null}{214/&/null/&/true/&/false/&/false/&/false/&/null}{0/&/null/&/false/&/false/&/false/&/false/&/null}{2/&/null/&/true/&/false/&/false/&/false/&/null}{3/&/null/&/true/&/false/&/false/&/false/&/null}{205/&/null/&/true/&/false/&/false/&/false/&/null}{206/&/null/&/true/&/false/&/false/&/false/&/null}{4/&/null/&/true/&/false/&/false/&/false/&/null}{201/&/null/&/true/&/false/&/false/&/false/&/null}{207/&/null/&/true/&/false/&/false/&/false/&/null}{208/&/null/&/true/&/false/&/false/&/false/&/null}{104/&/null/&/false/&/false/&/false/&/false/&/null}{101/&/null/&/false/&/false/&/false/&/false/&/null}{105/&/null/&/false/&/false/&/false/&/false/&/null}{102/&/null/&/false/&/false/&/false/&/false/&/null}{103/&/null/&/false/&/false/&/false/&/false/&/null}
+field_definitions={1/&/null/&/true/&/false/&/true}{5/&/null/&/true/&/false/&/false}{6/&/null/&/true/&/false/&/false}{214/&/null/&/true/&/false/&/false}{0/&/null/&/false/&/false/&/false}{2/&/null/&/true/&/false/&/false}{3/&/null/&/true/&/false/&/false}{205/&/null/&/true/&/false/&/false}{206/&/null/&/true/&/false/&/false}{4/&/null/&/true/&/false/&/false}{201/&/null/&/true/&/false/&/false}{207/&/null/&/true/&/false/&/false}{208/&/null/&/true/&/false/&/false}{104/&/null/&/false/&/false/&/false}{101/&/null/&/false/&/false/&/false}{105/&/null/&/false/&/false/&/false}{102/&/null/&/false/&/false/&/false}{103/&/null/&/false/&/false/&/false}
 group_by=1\#
 card_view_item_description=
 table_column_order=6\#5\#
