--- a/modules/user.properties
+++ b/modules/user.properties
@@ -1,5 +1,5 @@
 #
-#Sat Mar 21 14:48:16 EDT 2009
+#Fri Jan 09 23:42:10 CET 2009
 online_search_field_settings_dialog_size=600/450
 online_search_default_server=
 import_local_art_back_keywords=back
@@ -10,7 +10,7 @@ online_search_query_full_details_initially=false
 import_local_art_front_keywords=front,cover,case
 table_view_settings_dialog_size=500/400
 online_search_default_mode=
-field_definitions={7/&/null/&/true/&/false/&/false/&/false/&/null}{13/&/null/&/true/&/false/&/false/&/false/&/null}{11/&/null/&/true/&/false/&/false/&/false/&/null}{12/&/null/&/true/&/false/&/false/&/false/&/null}{205/&/null/&/true/&/false/&/false/&/false/&/null}{4/&/null/&/true/&/false/&/false/&/false/&/null}{6/&/null/&/true/&/false/&/false/&/false/&/null}{2/&/null/&/true/&/false/&/false/&/false/&/null}{0/&/null/&/true/&/false/&/false/&/false/&/null}{201/&/null/&/true/&/false/&/false/&/false/&/null}{214/&/null/&/true/&/false/&/false/&/false/&/null}{1/&/null/&/true/&/false/&/false/&/false/&/null}{206/&/null/&/true/&/false/&/false/&/false/&/null}{3/&/null/&/true/&/false/&/false/&/false/&/null}{8/&/null/&/true/&/false/&/false/&/false/&/null}{9/&/null/&/true/&/false/&/false/&/false/&/null}{5/&/null/&/true/&/false/&/false/&/false/&/null}
+field_definitions={7/&/null/&/true/&/false/&/false}{13/&/null/&/true/&/false/&/false}{11/&/null/&/true/&/false/&/false}{12/&/null/&/true/&/false/&/false}{205/&/null/&/true/&/false/&/false}{4/&/null/&/true/&/false/&/false}{6/&/null/&/true/&/false/&/false}{2/&/null/&/true/&/false/&/false}{0/&/null/&/true/&/false/&/false}{201/&/null/&/true/&/false/&/false}{214/&/null/&/true/&/false/&/false}{1/&/null/&/true/&/false/&/false}{206/&/null/&/true/&/false/&/false}{3/&/null/&/true/&/false/&/true}{8/&/null/&/true/&/false/&/false}{9/&/null/&/true/&/false/&/false}{5/&/null/&/true/&/false/&/false}
 group_by=
 card_view_item_description=214\#
 table_column_order=214\#
