--- a/resources/Dutch_resources.properties
+++ b/resources/Dutch_resources.properties
@@ -1,3 +1,4 @@
+lblFileTypes=Bestandstypes
 lblAlterField=Wijzigen
 msgTabDeleteNoRowSelected = Selecteer eerst een tab van de tabel
 lblItemFormSettings=Formulier Instellingen
