--- a/modules/category.properties
+++ b/modules/category.properties
@@ -1,5 +1,5 @@
 #
-#Sat Mar 21 14:48:16 EDT 2009
+#Fri Jan 09 23:30:07 CET 2009
 online_search_field_settings_dialog_size=600/450
 online_search_default_server=
 import_local_art_back_keywords=back
@@ -10,7 +10,7 @@ online_search_query_full_details_initially=false
 import_local_art_front_keywords=front,cover,case
 table_view_settings_dialog_size=500/400
 online_search_default_mode=
-field_definitions={205/&/null/&/true/&/false/&/false/&/false/&/null}{0/&/null/&/true/&/false/&/false/&/false/&/null}{151/&/null/&/true/&/false/&/false/&/false/&/null}{201/&/null/&/true/&/false/&/false/&/false/&/null}{214/&/null/&/true/&/false/&/false/&/false/&/null}{206/&/null/&/true/&/false/&/false/&/false/&/null}{150/&/null/&/true/&/false/&/false/&/false/&/null}
+field_definitions={205/&/null/&/true/&/false/&/false}{0/&/null/&/true/&/false/&/false}{151/&/null/&/true/&/false/&/false}{201/&/null/&/true/&/false/&/false}{214/&/null/&/true/&/false/&/false}{206/&/null/&/true/&/false/&/false}{150/&/null/&/true/&/false/&/false}
 group_by=
 card_view_item_description=214\#
 table_column_order=214\#
