--- a/modules/media.properties
+++ b/modules/media.properties
@@ -1,5 +1,5 @@
 #
-#Sat Mar 21 14:48:16 EDT 2009
+#Fri Jan 09 23:30:07 CET 2009
 online_search_field_settings_dialog_size=600/450
 online_search_default_server=
 import_local_art_back_keywords=back
@@ -10,7 +10,7 @@ online_search_query_full_details_initially=false
 import_local_art_front_keywords=front,cover,case
 table_view_settings_dialog_size=500/400
 online_search_default_mode=
-field_definitions={216/&/null/&/true/&/false/&/false/&/false/&/null}{215/&/null/&/true/&/false/&/false/&/false/&/null}{0/&/null/&/false/&/false/&/false/&/false/&/null}{150/&/null/&/true/&/true/&/false/&/false/&/null}{201/&/null/&/true/&/false/&/false/&/false/&/null}{152/&/null/&/true/&/false/&/false/&/false/&/null}{213/&/null/&/true/&/false/&/false/&/false/&/null}{151/&/null/&/true/&/false/&/false/&/false/&/null}{203/&/null/&/true/&/false/&/false/&/false/&/null}{204/&/null/&/true/&/false/&/false/&/false/&/null}{205/&/null/&/true/&/false/&/false/&/false/&/null}{206/&/null/&/true/&/false/&/false/&/false/&/null}{154/&/null/&/true/&/false/&/false/&/false/&/null}{101/&/null/&/false/&/false/&/false/&/false/&/null}{103/&/null/&/false/&/false/&/false/&/false/&/null}{105/&/null/&/false/&/false/&/false/&/false/&/null}{102/&/null/&/false/&/false/&/false/&/false/&/null}{104/&/null/&/false/&/false/&/false/&/false/&/null}{214/&/null/&/false/&/false/&/false/&/false/&/null}{202/&/null/&/true/&/false/&/false/&/false/&/null}
+field_definitions={216/&/null/&/true/&/false/&/false}{215/&/null/&/true/&/false/&/false}{0/&/null/&/false/&/false/&/false}{150/&/null/&/true/&/true/&/true}{201/&/null/&/true/&/false/&/false}{152/&/null/&/true/&/false/&/false}{213/&/null/&/true/&/false/&/false}{151/&/null/&/true/&/false/&/false}{203/&/null/&/true/&/false/&/false}{204/&/null/&/true/&/false/&/false}{205/&/null/&/true/&/false/&/false}{206/&/null/&/true/&/false/&/false}{154/&/null/&/true/&/false/&/false}{101/&/null/&/false/&/false/&/false}{103/&/null/&/false/&/false/&/false}{105/&/null/&/false/&/false/&/false}{102/&/null/&/false/&/false/&/false}{104/&/null/&/false/&/false/&/false}{214/&/null/&/false/&/false/&/false}{202/&/null/&/true/&/false/&/false}
 group_by=201\#152\#
 card_view_item_description=
 table_column_order=201\#150\#152\#154\#
