--- a/_source/net/datacrow/core/resources/DcMessages.properties
+++ b/_source/net/datacrow/core/resources/DcMessages.properties
@@ -1,3 +1,5 @@
+msgHelpAterField = Changing the type of a field might result in loss of data. Always make a backup before applying these changes!
+msgFieldCannotBeAltered = This field cannot be altered. It has been protected by the system. The field is needed, in its current state, to ensure proper functioning of Data Crow.
 msgTabDeleteNoRowSelected = Please select a tab from the table to remove
 msgLoginNameNotFilled = The login name has been left blank. A user must always have a login name
 msgShutdownComplete = Shutdown has been completed!
