*** empty log message ***

--- a/resources/Dutch_resources.properties
+++ b/resources/Dutch_resources.properties
@@ -1,7 +1,7 @@
 msgHelpAterField = Het veranderen van het type van een veld kan resulteren in het verlies van gegevens. Maak altijd eerst een backup van de data! 
 msgFieldCannotBeAltered = Dit veld kan niet worden gewijzigd. Het is, in zijn huidige staat, nodig om de juiste werking van Data Crow te kunnen garanderen.
 lblFileTypes=Bestandstypes
-lblAlterField=Wijzigen
+lblAlterField=Veld Wijzigen
 msgTabDeleteNoRowSelected = Selecteer eerst een tab van de tabel
 lblItemFormSettings=Formulier Instellingen
 lblUnique=Sleutel
