*** empty log message ***

--- a/_source/net/datacrow/core/resources/DcLabels.properties
+++ b/_source/net/datacrow/core/resources/DcLabels.properties
@@ -1,3 +1,6 @@
+lblDriveLetter=Drive Letter
+lblMapsTo=Maps to
+lblDriveMappings=Drive Mappings
 lblFileTypes=File Types
 lblAlterField=Change Field
 lblTab=Tab
