--- a/log4j.properties
+++ b/log4j.properties
@@ -1,7 +1,7 @@
 #
-#Thu Apr 16 16:46:01 CEST 2009
+#Sat May 09 11:29:50 CEST 2009
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
-log4j.appender.logfile.File=/H\:/Development/projects/datacrow/data/data_crow.log
+log4j.appender.logfile.File=/D\:/development/projects/datacrow/data/data_crow.log
 log4j.rootLogger=debug, textpane, logfile, stdout
 log4j.appender.logfile.layout.ConversionPattern=%5p [%t] (%F\:%L) - %m%n
 log4j.appender.textpane=net.datacrow.util.logging.TextPaneAppender
